--- a/stories/index.html
+++ b/stories/index.html
@@ -5258,19 +5258,19 @@
   <tbody>
     <tr>
       <td>0001</td>
-      <td><a href="/stories/tr/0001_çok-uzun-bir-adam_slides.html" target="_blank">Çok Uzun Bir Adam</a></td>
+      <td><a href="/stories/tr/0001_çok-uzun-bir-adam_slides.html" target="_blank">Çok uzun bir adam</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0002</td>
-      <td><a href="/stories/tr/0002_hayvanlara-bak_slides.html" target="_blank">Hayvanlara Bak</a></td>
+      <td><a href="/stories/tr/0002_hayvanlara-bak_slides.html" target="_blank">Hayvanlara bak</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0002"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0003</td>
-      <td><a href="/stories/tr/0003_okul-kıyafetleri_slides.html" target="_blank">Okul Kıyafetleri</a></td>
+      <td><a href="/stories/tr/0003_okul-kıyafetleri_slides.html" target="_blank">Okul kıyafetleri</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
@@ -5282,19 +5282,19 @@
     </tr>
     <tr>
       <td>0006</td>
-      <td><a href="/stories/tr/0006_anansi-ve-bilgelik_slides.html" target="_blank">Anansi Ve Bilgelik</a></td>
+      <td><a href="/stories/tr/0006_anansi-ve-bilgelik_slides.html" target="_blank">Anansi ve bilgelik</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0006"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0008</td>
-      <td><a href="/stories/tr/0008_ne-yapıyorsun_slides.html" target="_blank">Ne Yapıyorsun?</a></td>
+      <td><a href="/stories/tr/0008_ne-yapıyorsun_slides.html" target="_blank">Ne yapıyorsun?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0009</td>
-      <td><a href="/stories/tr/0009_benim-kedim-nerede_slides.html" target="_blank">Benim Kedim Nerede?</a></td>
+      <td><a href="/stories/tr/0009_benim-kedim-nerede_slides.html" target="_blank">Benim kedim nerede?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
@@ -5324,7 +5324,7 @@
     </tr>
     <tr>
       <td>0067</td>
-      <td><a href="/stories/tr/0067_yemek-pişirmek_slides.html" target="_blank">Yemek Pişirmek</a></td>
+      <td><a href="/stories/tr/0067_yemek-pişirmek_slides.html" target="_blank">Yemek pişirmek</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
@@ -5336,7 +5336,7 @@
     </tr>
     <tr>
       <td>0087</td>
-      <td><a href="/stories/tr/0087_okumayı-seviyorum_slides.html" target="_blank">Okumayı Seviyorum!</a></td>
+      <td><a href="/stories/tr/0087_okumayı-seviyorum_slides.html" target="_blank">Okumayı seviyorum!</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -5354,13 +5354,13 @@
     </tr>
     <tr>
       <td>0110</td>
-      <td><a href="/stories/tr/0110_bir-küçük-tohum-wangari-maathainin-hikayesi_slides.html" target="_blank">Bir Küçük Tohum: Wangari Maathai’nin Hikayesi</a></td>
+      <td><a href="/stories/tr/0110_bir-küçük-tohum-wangari-maathainin-hikayesi_slides.html" target="_blank">Bir küçük tohum: Wangari Maathai’nin hikayesi</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0111</td>
-      <td><a href="/stories/tr/0111_neden-su-aygırlarının-tüyleri-yok_slides.html" target="_blank">Neden Su Aygırlarının Tüyleri Yok</a></td>
+      <td><a href="/stories/tr/0111_neden-su-aygırlarının-tüyleri-yok_slides.html" target="_blank">Neden su aygırlarının tüyleri yok</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -5402,7 +5402,7 @@
     </tr>
     <tr>
       <td>0201</td>
-      <td><a href="/stories/tr/0201_eşek-çocuk_slides.html" target="_blank">Eşek Çocuk</a></td>
+      <td><a href="/stories/tr/0201_eşek-çocuk_slides.html" target="_blank">Eşek çocuk</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -5414,7 +5414,7 @@
     </tr>
     <tr>
       <td>0231</td>
-      <td><a href="/stories/tr/0231_hava-durumu-kitabı_slides.html" target="_blank">Hava Durumu Kitabı</a></td>
+      <td><a href="/stories/tr/0231_hava-durumu-kitabı_slides.html" target="_blank">Hava durumu kitabı</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
@@ -5438,7 +5438,7 @@
     </tr>
     <tr>
       <td>0271</td>
-      <td><a href="/stories/tr/0271_i̇ki_slides.html" target="_blank">İki</a></td>
+      <td><a href="/stories/tr/0271_iki_slides.html" target="_blank">İki</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
