--- a/stories/tr/0001_çok-uzun-bir-adam.html
+++ b/stories/tr/0001_çok-uzun-bir-adam.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Çok Uzun Bir Adam</title>
+    <title>Çok uzun bir adam</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
 
-<h1 id="ok-uzun-bir-adam">Çok Uzun Bir Adam</h1>
+<h1 id="ok-uzun-bir-adam">Çok uzun bir adam</h1>
 
 Cornelius Gulere<br>Türkçe</div><div class="pagebreak">
 
@@ -119,7 +119,7 @@ Cornelius Gulere<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
 
-<p>Evini terketti, ve büyük bir ormanda yaşadı. Çok uzun yıllar yaşadı.</p>
+<p>Evini terk etti, ve büyük bir ormanda yaşadı. Çok uzun yıllar yaşadı.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
