--- a/stories/tr/0001_çok-uzun-bir-adam_slides.html
+++ b/stories/tr/0001_çok-uzun-bir-adam_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Çok Uzun Bir Adam - Global African Storybook</title>
+  <title>Çok uzun bir adam - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="çok-uzun-bir-adam" class="slide level1">
-<h1>Çok Uzun Bir Adam</h1>
+<h1>Çok uzun bir adam</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p>Evini terketti, ve büyük bir ormanda yaşadı. Çok uzun yıllar yaşadı.</p>
+<p>Evini terk etti, ve büyük bir ormanda yaşadı. Çok uzun yıllar yaşadı.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,7 +195,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="çok-uzun-bir-adam-1">Çok Uzun Bir Adam</h2>
+<h2 id="çok-uzun-bir-adam-1">Çok uzun bir adam</h2>
 <strong>Text:</strong> Cornelius Gulere<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
