--- a/stories/tr/0002_hayvanlara-bak.html
+++ b/stories/tr/0002_hayvanlara-bak.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hayvanlara Bak</title>
+    <title>Hayvanlara bak</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/01.jpg" />
 
-<h1 id="hayvanlara-bak">Hayvanlara Bak</h1>
+<h1 id="hayvanlara-bak">Hayvanlara bak</h1>
 
 Jenny Katz<br>Türkçe</div><div class="pagebreak">
 
@@ -56,49 +56,49 @@ Jenny Katz<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/03.jpg" /></p>
 
-<p>İnek ”Möö.” diyor.</p>
+<p>İnek “Möö.” diyor.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
 
-<p>Keçi ”Mee, Mee” diyor.</p>
+<p>Keçi “Mee, Mee” diyor.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/05.jpg" /></p>
 
-<p>At ”İhiii” diyor.</p>
+<p>At “İhiii” diyor.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
 
-<p>Domuz ”Öğrn.” diyor.</p>
+<p>Domuz “Öğrn.” diyor.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/07.jpg" /></p>
 
-<p>Tavuk ”Gıt gıt gıt.” diyor.</p>
+<p>Tavuk “Gıt gıt gıt.” diyor.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
 
-<p>Köpek  ”Hav hav.” diyor.</p>
+<p>Köpek “Hav hav.” diyor.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/09.jpg" /></p>
 
-<p>Çiftçi ”Şşşt!” diyor.</p>
+<p>Çiftçi “Şşşt!” diyor.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
