--- a/stories/tr/0003_okul-kıyafetleri.html
+++ b/stories/tr/0003_okul-kıyafetleri.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Okul Kıyafetleri</title>
+    <title>Okul kıyafetleri</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/01.jpg" />
 
-<h1 id="okul-kyafetleri">Okul Kıyafetleri</h1>
+<h1 id="okul-kyafetleri">Okul kıyafetleri</h1>
 
 Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Türkçe</div><div class="pagebreak">
 
