--- a/stories/tr/0004_keçi-köpek-ve-i̇nek_slides.html
+++ b/stories/tr/0004_keçi-köpek-ve-i̇nek_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
-<p>Taksici, bu durumdan çok rahatsız olmuş . Köpek'in parasının üstünü vermeden oradan uzaklaşmış.</p>
+<p>Taksici, bu durumdan çok rahatsız olmuş. Köpek'in parasının üstünü vermeden oradan uzaklaşmış.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
-<p>Keçi araba sesinden kaçar. Ücretini odemediği için tutuklanmaktan korkar.</p>
+<p>Keçi araba sesinden kaçar. Ücretini ödemediği için tutuklanmaktan korkar.</p>
 <center>
 <strong>7</strong>
 </center>
