--- a/stories/tr/0006_anansi-ve-bilgelik.html
+++ b/stories/tr/0006_anansi-ve-bilgelik.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Anansi Ve Bilgelik</title>
+    <title>Anansi ve bilgelik</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/01.jpg" />
 
-<h1 id="anansi-ve-bilgelik">Anansi Ve Bilgelik</h1>
+<h1 id="anansi-ve-bilgelik">Anansi ve bilgelik</h1>
 
 Ghanaian folktale<br>Türkçe</div><div class="pagebreak">
 
@@ -56,35 +56,35 @@ Ghanaian folktale<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
 
-<p>Bir gün, Nyame, bilgelik kasesini Anansiye vermeye karar vermiş. Anansi kil kasenin içine her bakışında yeni şeyler öğrenmiş. Bu, çok heyecan vericiymiş !</p>
+<p>Bir gün, Nyame, bilgelik kasesini Anansi’ye vermeye karar vermiş. Anansi kil kasenin içine her bakışında yeni şeyler öğrenmiş. Bu, çok heyecan vericiymiş!</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
 
-<p>Açgözlü Anansi, ”Ben bu kaseyi büyük bir ağacın en tepesinde güvenle saklarım. Böylece tüm bilgeliğe ben sahip olurum!” diye düşünmüş.  Uzun bir ip dokumuş, kil kasenin etrafına sarmış ve kaseyi karnına bağlamış. Ama her seferinde dizlerine çarpan kase ile birlikte ağaca tımanmak çok zormuş.</p>
+<p>Açgözlü Anansi, “Ben bu kaseyi büyük bir ağacın en tepesinde güvenle saklarım. Böylece tüm bilgeliğe ben sahip olurum!” diye düşünmüş. Uzun bir ip dokumuş, kil kasenin etrafına sarmış ve kaseyi karnına bağlamış. Ama her seferinde dizlerine çarpan kase ile birlikte ağaca tırmanmak çok zormuş.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
 
-<p>Tüm bu zaman boyunca, Anansi’nin oğlu, ağacın altında babasını izleyerek durmuş. ”Eğer kaseyi sırtına bağlarsan tırmanmak daha kolay olmayacak mı?” diye sormuş. Anansi, bilgeik dolu kil kaseyi sırtına bağlamayı denemiş ve gerçekten de kaseyi bu sekilde taşımak çok daha kolaymış.</p>
+<p>Tüm bu zaman boyunca, Anansi’nin oğlu, ağacın altında babasını izleyerek durmuş. “Eğer kaseyi sırtına bağlarsan tırmanmak daha kolay olmayacak mı?” diye sormuş. Anansi, bilgelik dolu kil kaseyi sırtına bağlamayı denemiş ve gerçekten de kaseyi bu şekilde taşımak çok daha kolaymış.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
 
-<p>Hızlı bir şekilde ağacın tepesine varmış. Ama ardından durmuş ve düşünmüş, ”Benim tüm bilgeliğe sahip tek kişi olmam gerekiyordu, ve burada benim oğlum benden daha akıllı.” Anansi bu duruma o kadar çok sinirlenmiş ki, kil kaseyi ağacın tepesinden aşağı atmış.</p>
+<p>Hızlı bir şekilde ağacın tepesine varmış. Ama ardından durmuş ve düşünmüş, “Benim tüm bilgeliğe sahip tek kişi olmam gerekiyordu, ve burada benim oğlum benden daha akıllı.” Anansi bu duruma o kadar çok sinirlenmiş ki, kil kaseyi ağacın tepesinden aşağı atmış.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
 
-<p>Kase yerde parçalara ayrılmış. Bilgelik, herkesin birbiriyle paylaşması için artık serbestmiş. İşte bu, insanların nasıl çiftçilik yapılacağını, kıyafet dokumayı ve demir işlemeyi ve nasıl yapacaklarını bildikleri diğer herşeyi nasıl  öğrendiklerinin hikayesidir.</p>
+<p>Kase yerde parçalara ayrılmış. Bilgelik, herkesin birbiriyle paylaşması için artık serbestmiş. İşte bu, insanların nasıl çiftçilik yapılacağını, kıyafet dokumayı ve demir işlemeyi ve nasıl yapacaklarını bildikleri diğer her şeyi nasıl öğrendiklerinin hikayesidir.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
