--- a/stories/tr/0008_ne-yapıyorsun.html
+++ b/stories/tr/0008_ne-yapıyorsun.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ne Yapıyorsun?</title>
+    <title>Ne yapıyorsun?</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
 
-<h1 id="ne-yapyorsun">Ne Yapıyorsun?</h1>
+<h1 id="ne-yapyorsun">Ne yapıyorsun?</h1>
 
 Nina Orange<br>Türkçe</div><div class="pagebreak">
 
