--- a/stories/tr/0009_benim-kedim-nerede.html
+++ b/stories/tr/0009_benim-kedim-nerede.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Benim Kedim Nerede?</title>
+    <title>Benim kedim nerede?</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/01.jpg" />
 
-<h1 id="benim-kedim-nerede">Benim Kedim Nerede?</h1>
+<h1 id="benim-kedim-nerede">Benim kedim nerede?</h1>
 
 Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Türkçe</div><div class="pagebreak">
 
@@ -70,7 +70,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Türkçe</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/05.jpg" /></p>
 
-<p>Koltuğun yaninda mı?</p>
+<p>Koltuğun yanında mı?</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -103,7 +103,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Türkçe</div><div class="pa
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Bronwen Heath<br /><strong>Translation:</strong> Nahide Büşra Ertekin, Zeynep Kara<br /><strong>Language:</strong> Turkish</p>
+<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Bronwen Heath<br /><strong>Translation:</strong> Nahide Büşra Ertekin &amp; Zeynep Kara<br /><strong>Language:</strong> Turkish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/where-my-cat">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
