--- a/stories/tr/0009_benim-kedim-nerede_slides.html
+++ b/stories/tr/0009_benim-kedim-nerede_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Benim Kedim Nerede? - Global African Storybook</title>
+  <title>Benim kedim nerede? - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="benim-kedim-nerede" class="slide level1">
-<h1>Benim Kedim Nerede?</h1>
+<h1>Benim kedim nerede?</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/01.jpg" />
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/05.jpg" /></p>
-<p>Koltuğun yaninda mı?</p>
+<p>Koltuğun yanında mı?</p>
 <center>
 <strong>4</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<h2 id="benim-kedim-nerede-1">Benim Kedim Nerede?</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Nahide Büşra Ertekin, Zeynep Kara<br> <strong>Language:</strong> Turkish<br>
+<h2 id="benim-kedim-nerede-1">Benim kedim nerede?</h2>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Nahide Büşra Ertekin &amp; Zeynep Kara<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
