--- a/stories/tr/0027_karar.html
+++ b/stories/tr/0027_karar.html
@@ -105,7 +105,7 @@ Ursula Nafula<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/10.jpg" /></p>
 
-<p>Ardından bir gün, musluk kurudu ve bizim konteynırlarımız boştu.</p>
+<p>Ardından bir gün, musluk kurudu ve bizim kaplarımız boştu.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -126,35 +126,35 @@ Ursula Nafula<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/13.jpg" /></p>
 
-<p>Babam ayağa kalktı ve dedi ki ”Problemlerimizi çözmek için birlikte çalışmalıyız.”</p>
+<p>Babam ayağa kalktı ve dedi ki “Problemlerimizi çözmek için birlikte çalışmalıyız.”</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
 
-<p>Sekiz yaşındaki Juma, bir ağacın dalında oturarak bağırdı, ”Ben temizleme de yardım edebilirim.”</p>
+<p>Sekiz yaşındaki Juma, bir ağacın dalında oturarak bağırdı, “Ben temizleme de yardım edebilirim.”</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/15.jpg" /></p>
 
-<p>Bir kadın dedi ki ”Kadınlar yiyecek yetiştirme de bana katılabilirler.”</p>
+<p>Bir kadın dedi ki “Kadınlar yiyecek yetiştirme de bana katılabilirler.”</p>
 
 <div class="pagenum">14</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/16.jpg" /></p>
 
-<p>Başka bir adam kalktı ve dedi ki, ”Erkekler kuyu açacaklar.”</p>
+<p>Başka bir adam kalktı ve dedi ki, “Erkekler kuyu açacaklar.”</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
 
-<p>Hepimiz bir ağızdan bağırdık, ” Hayatlarımızı değiştirmek zorundayız.” O günden itibaren problemlerimizi çözmek için hep birlikte çalıştık.</p>
+<p>Hepimiz bir ağızdan bağırdık, “ Hayatlarımızı değiştirmek zorundayız.” O günden itibaren problemlerimizi çözmek için hep birlikte çalıştık.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
