--- a/stories/tr/0027_karar_slides.html
+++ b/stories/tr/0027_karar_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/10.jpg" /></p>
-<p>Ardından bir gün, musluk kurudu ve bizim konteynırlarımız boştu.</p>
+<p>Ardından bir gün, musluk kurudu ve bizim kaplarımız boştu.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/13.jpg" /></p>
-<p>Babam ayağa kalktı ve dedi ki ”Problemlerimizi çözmek için birlikte çalışmalıyız.”</p>
+<p>Babam ayağa kalktı ve dedi ki &quot;Problemlerimizi çözmek için birlikte çalışmalıyız.&quot;</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
-<p>Sekiz yaşındaki Juma, bir ağacın dalında oturarak bağırdı, ”Ben temizleme de yardım edebilirim.”</p>
+<p>Sekiz yaşındaki Juma, bir ağacın dalında oturarak bağırdı, &quot;Ben temizleme de yardım edebilirim.&quot;</p>
 <center>
 <strong>13</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/15.jpg" /></p>
-<p>Bir kadın dedi ki ”Kadınlar yiyecek yetiştirme de bana katılabilirler.”</p>
+<p>Bir kadın dedi ki &quot;Kadınlar yiyecek yetiştirme de bana katılabilirler.&quot;</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/16.jpg" /></p>
-<p>Başka bir adam kalktı ve dedi ki, ”Erkekler kuyu açacaklar.”</p>
+<p>Başka bir adam kalktı ve dedi ki, &quot;Erkekler kuyu açacaklar.&quot;</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
-<p>Hepimiz bir ağızdan bağırdık, ” Hayatlarımızı değiştirmek zorundayız.” O günden itibaren problemlerimizi çözmek için hep birlikte çalıştık.</p>
+<p>Hepimiz bir ağızdan bağırdık, &quot; Hayatlarımızı değiştirmek zorundayız.&quot; O günden itibaren problemlerimizi çözmek için hep birlikte çalıştık.</p>
 <center>
 <strong>16</strong>
 </center>
