--- a/stories/tr/0052_simbegwire.html
+++ b/stories/tr/0052_simbegwire.html
@@ -91,7 +91,7 @@ Rukia Nantale<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
 
-<p>Bir sabah, Simbegwire yataktan kalkmak için geç kaldı. “Seni tembel kız!” diye bağırdı Anita. Simbegwire’ı yatağın dışına çekti. Değerli battaniye bir çiviye takıldı, ve ikiye yırtıldı.</p>
+<p>Bir sabah, Simbegwire yataktan kalkmak için geç kaldı. “Seni tembel kız!” diye bağırdı Anita. Simbegwire’ı yatağın dışına çekti. Değerli battaniye bir çiviye takıldı, ve yırtılıp ikiye ayrıldı.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -119,21 +119,21 @@ Rukia Nantale<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
 
-<p>Bu kadın ağacın içine, yukarı doğru baktı. Kızı ve elindeki renkli battaniyeyi gördüğü zaman, bağırdı, “ Simbegwire, erkek kardeşimin çocuğu!” Diğer kadın çamaşır yıkamayı bıraktı ve Simbegwire’a ağaçtan inmesine yardım etti. Halası küçük kızı kucakladı ve onu rahatlatmaya çalıştı.</p>
+<p>Bu kadın ağacın içine, yukarı doğru baktı. Kızı ve elindeki renkli battaniyeyi gördüğü zaman, bağırdı, “Simbegwire, erkek kardeşimin çocuğu!” Diğer kadın çamaşır yıkamayı bıraktı ve Simbegwire’a ağaçtan inmesine yardım etti. Halası küçük kızı kucakladı ve onu rahatlatmaya çalıştı.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
 
-<p>Simbegwire’ın halası, çocuğu kendi evine götürdü. Simbegwire’a sıcak yemek verdi, ve onu, annesinin battaniyesiyle birlikte yatağa yatırdı. O gece, Simbegwire uykuya dalarken ağladı. Fakat bunlar rahatlamanın gözyaşlarıydı. O biliyordu ki halası ona bakacaktı.</p>
+<p>Simbegwire’ın halası, çocuğu kendi evine götürdü. Simbegwire’a sıcak yemek verdi, ve onu, annesinin battaniyesiyle birlikte yatağa yatırdı. O gece, Simbegwire uykuya dalarken ağladı. Fakat bunlar rahatlamanın göz yaşlarıydı. O biliyordu ki halası ona bakacaktı.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
 
-<p>Simbegwire’ın babası eve döndüğü zaman, kızının odasını boş buldu. “Ne oldu Anita?” diye buruk bir yürekle sordu. Kadın, Simbegwire’ın kaçtığını açıkladı. “Ben ondan bana saygı duymasını istedim.” dedi “Ama belki çok serttim.” Simbegwire’ın babası evi terk etti ve akarsu yönünde ilerledi. Eğer kız kardeşi Simbegwire’ı görmüşse öğrenmek için, kız kardeşinin köyüne kadar devam etti.</p>
+<p>Simbegwire’ın babası eve döndüğü zaman, kızının odasını boş buldu. “Ne oldu Anita?” diye buruk bir yürekle sordu. Kadın, Simbegwire’ın kaçtığını açıkladı. “Ben ondan bana saygı duymasını istedim.” dedi “Ama belki çok serttim.” Simbegwire’ın babası evi terk etti ve akarsu yönünde ilerledi. Kız kardeşinin Simbegwire’ı görüp görmediğini öğrenmek için, kız kardeşinin köyüne kadar devam etti.</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
