--- a/stories/tr/0052_simbegwire_slides.html
+++ b/stories/tr/0052_simbegwire_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
-<p>Bir sabah, Simbegwire yataktan kalkmak için geç kaldı. &quot;Seni tembel kız!&quot; diye bağırdı Anita. Simbegwire'ı yatağın dışına çekti. Değerli battaniye bir çiviye takıldı, ve ikiye yırtıldı.</p>
+<p>Bir sabah, Simbegwire yataktan kalkmak için geç kaldı. &quot;Seni tembel kız!&quot; diye bağırdı Anita. Simbegwire'ı yatağın dışına çekti. Değerli battaniye bir çiviye takıldı, ve yırtılıp ikiye ayrıldı.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
-<p>Bu kadın ağacın içine, yukarı doğru baktı. Kızı ve elindeki renkli battaniyeyi gördüğü zaman, bağırdı, &quot; Simbegwire, erkek kardeşimin çocuğu!&quot; Diğer kadın çamaşır yıkamayı bıraktı ve Simbegwire'a ağaçtan inmesine yardım etti. Halası küçük kızı kucakladı ve onu rahatlatmaya çalıştı.</p>
+<p>Bu kadın ağacın içine, yukarı doğru baktı. Kızı ve elindeki renkli battaniyeyi gördüğü zaman, bağırdı, &quot;Simbegwire, erkek kardeşimin çocuğu!&quot; Diğer kadın çamaşır yıkamayı bıraktı ve Simbegwire'a ağaçtan inmesine yardım etti. Halası küçük kızı kucakladı ve onu rahatlatmaya çalıştı.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
-<p>Simbegwire'ın halası, çocuğu kendi evine götürdü. Simbegwire'a sıcak yemek verdi, ve onu, annesinin battaniyesiyle birlikte yatağa yatırdı. O gece, Simbegwire uykuya dalarken ağladı. Fakat bunlar rahatlamanın gözyaşlarıydı. O biliyordu ki halası ona bakacaktı.</p>
+<p>Simbegwire'ın halası, çocuğu kendi evine götürdü. Simbegwire'a sıcak yemek verdi, ve onu, annesinin battaniyesiyle birlikte yatağa yatırdı. O gece, Simbegwire uykuya dalarken ağladı. Fakat bunlar rahatlamanın göz yaşlarıydı. O biliyordu ki halası ona bakacaktı.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
-<p>Simbegwire'ın babası eve döndüğü zaman, kızının odasını boş buldu. &quot;Ne oldu Anita?&quot; diye buruk bir yürekle sordu. Kadın, Simbegwire'ın kaçtığını açıkladı. &quot;Ben ondan bana saygı duymasını istedim.&quot; dedi &quot;Ama belki çok serttim.&quot; Simbegwire'ın babası evi terk etti ve akarsu yönünde ilerledi. Eğer kız kardeşi Simbegwire'ı görmüşse öğrenmek için, kız kardeşinin köyüne kadar devam etti.</p>
+<p>Simbegwire'ın babası eve döndüğü zaman, kızının odasını boş buldu. &quot;Ne oldu Anita?&quot; diye buruk bir yürekle sordu. Kadın, Simbegwire'ın kaçtığını açıkladı. &quot;Ben ondan bana saygı duymasını istedim.&quot; dedi &quot;Ama belki çok serttim.&quot; Simbegwire'ın babası evi terk etti ve akarsu yönünde ilerledi. Kız kardeşinin Simbegwire'ı görüp görmediğini öğrenmek için, kız kardeşinin köyüne kadar devam etti.</p>
 <center>
 <strong>13</strong>
 </center>
