--- a/stories/tr/0066_nozibele-ve-üç-saç-teli_slides.html
+++ b/stories/tr/0066_nozibele-ve-üç-saç-teli_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
-<p>Çok uzun zaman önce, üç kız arkadaş odun toplamaya gitmisler.</p>
+<p>Çok uzun zaman önce, üç kız arkadaş odun toplamaya gitmişler.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
-<p>Sonra bir anda geç kaldıklarını farkedip köye doğru koşmaya başlamışlar.</p>
+<p>Sonra bir anda geç kaldıklarını fark edip köye doğru koşmaya başlamışlar.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
-<p>Kapıyı bir köpek açınca cok şaşırmış. &quot;Ne istiyorsun?&quot; demiş köpek. Nozibele de &quot;Evimin yolunu kaybettim, kalacak yere ihtiyacım var,&quot; demiş. Köpek &quot;İçeri gel yoksa seni ısırırım!&quot; deyince, Nozibele içeri girmiş.</p>
+<p>Kapıyı bir köpek açınca çok şaşırmış. &quot;Ne istiyorsun?&quot; demiş köpek. Nozibele de &quot;Evimin yolunu kaybettim, kalacak yere ihtiyacım var,&quot; demiş. Köpek &quot;İçeri gel yoksa seni ısırırım!&quot; deyince, Nozibele içeri girmiş.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
-<p>Köpek &quot;Bana yemek pişir!&quot; demiş. &quot;Ama ben hiç bir köpeğe yemek yapmadım ki&quot; demis Nozibele. &quot;Yap yoksa ısırırım!&quot; demiş köpek. Nozibele de köpeğe biraz yemek pişirmiş.</p>
+<p>Köpek &quot;Bana yemek pişir!&quot; demiş. &quot;Ama ben hiç bir köpeğe yemek yapmadım ki,&quot; demiş Nozibele. &quot;Yap yoksa ısırırım!&quot; demiş köpek. Nozibele de köpeğe biraz yemek pişirmiş.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
-<p>Böylece Nozibele hergün köpeğin yemek ve temizlik işlerini yapmaya başlamış. Sonra birgün köpek, &quot;Nozibele, bugün bir kaç arkadaşımı ziyaret edeceğim. Ben gelene kadar, evi temizle, yemek pişir ve çamaşırlarımı yıka&quot; demiş.</p>
+<p>Böylece Nozibele her gün köpeğin yemek ve temizlik işlerini yapmaya başlamış. Sonra birgün köpek, &quot;Nozibele, bugün bir kaç arkadaşımı ziyaret edeceğim. Ben gelene kadar, evi temizle, yemek pişir ve çamaşırlarımı yıka,&quot; demiş.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
-<p>Köpek geri geldiğinde Nozibele'yi aramış. &quot;Nozibele nerdesin?&quot; diye bağırmaya başlamış. Yatağın altındaki saç &quot;Burdayım yatağın altında,&quot; demiş. Ikinci saç, &quot;Burdayım, kapının arkasında,&quot; demiş. Üçüncü saç da, &quot;Burdayım, ağılda&quot; diye seslenmiş.</p>
+<p>Köpek geri geldiğinde Nozibele'yi aramış. &quot;Nozibele neredesin?&quot; diye bağırmaya başlamış. Yatağın altındaki saç &quot;Buradayım yatağın altında,&quot; demiş. İkinci saç, &quot;Buradayım, kapının arkasında,&quot; demiş. Üçüncü saç da, &quot;Buradayım, ağılda,&quot; diye seslenmiş.</p>
 <center>
 <strong>12</strong>
 </center>
