--- a/stories/tr/0067_yemek-pişirmek_slides.html
+++ b/stories/tr/0067_yemek-pişirmek_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Yemek Pişirmek - Global African Storybook</title>
+  <title>Yemek pişirmek - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="yemek-pişirmek" class="slide level1">
-<h1>Yemek Pişirmek</h1>
+<h1>Yemek pişirmek</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/01.jpg" />
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/06.jpg" /></p>
-<p>Balkabağını kesiyorum.</p>
+<p>Bal kabağını kesiyorum.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -168,7 +168,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="yemek-pişirmek-1">Yemek Pişirmek</h2>
+<h2 id="yemek-pişirmek-1">Yemek pişirmek</h2>
 <strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Kathy Arbuckle<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
