--- a/stories/tr/0089_khalai-bitkilerle-konuşuyor.html
+++ b/stories/tr/0089_khalai-bitkilerle-konuşuyor.html
@@ -91,7 +91,7 @@ Ursula Nafula<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
 
-<p>Khakai okuldan evine döndüğünde, portakal ağacını ziyaret ediyor. “Portakalların olgunlaştı mı?” diye soruyor.</p>
+<p>Khalai okuldan evine döndüğünde, portakal ağacını ziyaret ediyor. “Portakalların olgunlaştı mı?” diye soruyor.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
