--- a/stories/tr/0110_bir-küçük-tohum-wangari-maathainin-hikayesi.html
+++ b/stories/tr/0110_bir-küçük-tohum-wangari-maathainin-hikayesi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bir Küçük Tohum: Wangari Maathai'nin Hikayesi</title>
+    <title>Bir küçük tohum: Wangari Maathai'nin hikayesi</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/01.jpg" />
 
-<h1 id="bir-kk-tohum-wangari-maathainin-hikayesi">Bir Küçük Tohum: Wangari Maathai’nin Hikayesi</h1>
+<h1 id="bir-kk-tohum-wangari-maathainin-hikayesi">Bir küçük tohum: Wangari Maathai’nin hikayesi</h1>
 
 Nicola Rijsdijk<br>Türkçe</div><div class="pagebreak">
 
@@ -91,7 +91,7 @@ Nicola Rijsdijk<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/08.jpg" /></p>
 
-<p>Daha çok öğrendikçe daha da farkına vardı ki o Kenya’nın insanlarını çok seviyordu. Onların mutlu ve özgür olmalarını istiyordu. Daha çok şey öğrendikçe Afrikadaki evi hakkında daha çok şey hatırladı.</p>
+<p>Daha çok öğrendikçe daha da farkına vardı ki o Kenya’nın insanlarını çok seviyordu. Onların mutlu ve özgür olmalarını istiyordu. Daha çok şey öğrendikçe Afrika’daki evi hakkında daha çok şey hatırladı.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
