--- a/stories/tr/0110_bir-küçük-tohum-wangari-maathainin-hikayesi_slides.html
+++ b/stories/tr/0110_bir-küçük-tohum-wangari-maathainin-hikayesi_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Bir Küçük Tohum: Wangari Maathai'nin Hikayesi - Global African Storybook</title>
+  <title>Bir küçük tohum: Wangari Maathai'nin hikayesi - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="bir-küçük-tohum-wangari-maathainin-hikayesi" class="slide level1">
-<h1>Bir Küçük Tohum: Wangari Maathai'nin Hikayesi</h1>
+<h1>Bir küçük tohum: Wangari Maathai'nin hikayesi</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/01.jpg" />
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/08.jpg" /></p>
-<p>Daha çok öğrendikçe daha da farkına vardı ki o Kenya'nın insanlarını çok seviyordu. Onların mutlu ve özgür olmalarını istiyordu. Daha çok şey öğrendikçe Afrikadaki evi hakkında daha çok şey hatırladı.</p>
+<p>Daha çok öğrendikçe daha da farkına vardı ki o Kenya'nın insanlarını çok seviyordu. Onların mutlu ve özgür olmalarını istiyordu. Daha çok şey öğrendikçe Afrika’daki evi hakkında daha çok şey hatırladı.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -204,7 +204,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="bir-küçük-tohum-wangari-maathainin-hikayesi-1">Bir Küçük Tohum: Wangari Maathai'nin Hikayesi</h2>
+<h2 id="bir-küçük-tohum-wangari-maathainin-hikayesi-1">Bir küçük tohum: Wangari Maathai'nin hikayesi</h2>
 <strong>Text:</strong> Nicola Rijsdijk<br> <strong>Illustrations:</strong> Maya Marshak<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
