--- a/stories/tr/0111_neden-su-aygırlarının-tüyleri-yok.html
+++ b/stories/tr/0111_neden-su-aygırlarının-tüyleri-yok.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Neden Su Aygırlarının Tüyleri Yok</title>
+    <title>Neden su aygırlarının tüyleri yok</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/01.jpg" />
 
-<h1 id="neden-su-aygrlarnn-tyleri-yok">Neden Su Aygırlarının Tüyleri Yok</h1>
+<h1 id="neden-su-aygrlarnn-tyleri-yok">Neden su aygırlarının tüyleri yok</h1>
 
 Basilio Gimo, David Ker<br>Türkçe</div><div class="pagebreak">
 
