--- a/stories/tr/0120_saç.html
+++ b/stories/tr/0120_saç.html
@@ -84,7 +84,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Türkçe</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/07.jpg" /></p>
 
-<p>Zanele saçlarını geriye doğru tara</p>
+<p>Zanele saçlarını geriye doğru tarar.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Türkçe</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/09.jpg" /></p>
 
-<p>Themba saçlarını traş ettirir.</p>
+<p>Themba saçlarını tıraş ettirir.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
