--- a/stories/tr/0141_tavuk-ve-kırkayak.html
+++ b/stories/tr/0141_tavuk-ve-kırkayak.html
@@ -56,7 +56,7 @@ Winny Asara<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
 
-<p>Futbol sahasına gidip oynamaya başladılar. Tavuk hızlı idi fakat Kırkayak ondan daha hızlı idi. Tavuk topu çok uzaklara atabiliyordu ama Kırkayak ondan daha uzaklara atiyordu topu. Tavuk bu işe bozulmaya başlamıştı.</p>
+<p>Futbol sahasına gidip oynamaya başladılar. Tavuk hızlı idi fakat Kırkayak ondan daha hızlı idi. Tavuk topu çok uzaklara atabiliyordu ama Kırkayak ondan daha uzaklara atıyordu topu. Tavuk bu işe bozulmaya başlamıştı.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -70,7 +70,7 @@ Winny Asara<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
 
-<p>Kırkayak şutu çekti ve ilk golünü attı. Sonra topu çalımladı ve ikinci şutu da gol oldu. Kirkayağın kafa atışı da gol oldu. Toplam tam 5 tane gol atmıştı Kırkayak.</p>
+<p>Kırkayak şutu çekti ve ilk golünü attı. Sonra topu çalımladı ve ikinci şutu da gol oldu. Kırkayağın kafa atışı da gol oldu. Toplam tam 5 tane gol atmıştı Kırkayak.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,14 +84,14 @@ Winny Asara<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
 
-<p>Tavuk öyle öfkelenmişti ki ağzını açıp Kirkayağı yutuverdi.</p>
+<p>Tavuk öyle öfkelenmişti ki ağzını açıp Kırkayağı yutuverdi.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
 
-<p>Tavuk eve dönerken yolda Kirkayağın annesiyle karşılaştı. Anne Kırkayak sordu, “Çocuğumu gördün mü?” Tavuk hiç sesini çıkarmadı. Anne Kırkayak telaşlanmıştı.</p>
+<p>Tavuk eve dönerken yolda Kırkayağın annesiyle karşılaştı. Anne Kırkayak sordu, “Çocuğumu gördün mü?” Tavuk hiç sesini çıkarmadı. Anne Kırkayak telaşlanmıştı.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Winny Asara<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
 
-<p>Tavuk önce gaz çıkardı sonra tükürdü, hapşırdı ve öksürdü. Ve gene öksürdü. Kirkayağın yaydığı koku ve tat iğrençti.</p>
+<p>Tavuk önce gaz çıkardı sonra tükürdü, hapşırdı ve öksürdü. Ve gene öksürdü. Kırkayağın yaydığı koku ve tat iğrençti.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
