--- a/stories/tr/0141_tavuk-ve-kırkayak_slides.html
+++ b/stories/tr/0141_tavuk-ve-kırkayak_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
-<p>Futbol sahasına gidip oynamaya başladılar. Tavuk hızlı idi fakat Kırkayak ondan daha hızlı idi. Tavuk topu çok uzaklara atabiliyordu ama Kırkayak ondan daha uzaklara atiyordu topu. Tavuk bu işe bozulmaya başlamıştı.</p>
+<p>Futbol sahasına gidip oynamaya başladılar. Tavuk hızlı idi fakat Kırkayak ondan daha hızlı idi. Tavuk topu çok uzaklara atabiliyordu ama Kırkayak ondan daha uzaklara atıyordu topu. Tavuk bu işe bozulmaya başlamıştı.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
-<p>Kırkayak şutu çekti ve ilk golünü attı. Sonra topu çalımladı ve ikinci şutu da gol oldu. Kirkayağın kafa atışı da gol oldu. Toplam tam 5 tane gol atmıştı Kırkayak.</p>
+<p>Kırkayak şutu çekti ve ilk golünü attı. Sonra topu çalımladı ve ikinci şutu da gol oldu. Kırkayağın kafa atışı da gol oldu. Toplam tam 5 tane gol atmıştı Kırkayak.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
-<p>Tavuk öyle öfkelenmişti ki ağzını açıp Kirkayağı yutuverdi.</p>
+<p>Tavuk öyle öfkelenmişti ki ağzını açıp Kırkayağı yutuverdi.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
-<p>Tavuk eve dönerken yolda Kirkayağın annesiyle karşılaştı. Anne Kırkayak sordu, &quot;Çocuğumu gördün mü?&quot; Tavuk hiç sesini çıkarmadı. Anne Kırkayak telaşlanmıştı.</p>
+<p>Tavuk eve dönerken yolda Kırkayağın annesiyle karşılaştı. Anne Kırkayak sordu, &quot;Çocuğumu gördün mü?&quot; Tavuk hiç sesini çıkarmadı. Anne Kırkayak telaşlanmıştı.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
-<p>Tavuk önce gaz çıkardı sonra tükürdü, hapşırdı ve öksürdü. Ve gene öksürdü. Kirkayağın yaydığı koku ve tat iğrençti.</p>
+<p>Tavuk önce gaz çıkardı sonra tükürdü, hapşırdı ve öksürdü. Ve gene öksürdü. Kırkayağın yaydığı koku ve tat iğrençti.</p>
 <center>
 <strong>10</strong>
 </center>
