--- a/stories/tr/0158_horoz-ve-kartal.html
+++ b/stories/tr/0158_horoz-ve-kartal.html
@@ -63,7 +63,7 @@ Ann Nduku<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
 
-<p>Iyi bir gece uykusundan sonra, Tavuğun aklına parlak bir fikir gelmiş. Kuş arkadaşlarından dökülen tüyleri toplamaya başlamış. “Gel bu tüyleri birleştirip dikelim ve kendi kanatlarımızın üzerine ekleyelim,” demiş Horoz. “Belki daha kolay yolculuk yapmamızı sağlar.”</p>
+<p>İyi bir gece uykusundan sonra, Tavuğun aklına parlak bir fikir gelmiş. Kuş arkadaşlarından dökülen tüyleri toplamaya başlamış. “Gel bu tüyleri birleştirip dikelim ve kendi kanatlarımızın üzerine ekleyelim,” demiş Horoz. “Belki daha kolay yolculuk yapmamızı sağlar.”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Ann Nduku<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
 
-<p>“Bana bir gün izin ver,” diye yalvarmış Tavuk. “Sonra kanadını tamir edip gene yemek aramak için uçarsın.” “Sadece bir gün ama,” demiş Kartal. “Eğer iğneyi bulamazsan karşilığında civcivlerinden birini alırım.”</p>
+<p>“Bana bir gün izin ver,” diye yalvarmış Tavuk. “Sonra kanadını tamir edip gene yemek aramak için uçarsın.” “Sadece bir gün ama,” demiş Kartal. “Eğer iğneyi bulamazsan karşılığında civcivlerinden birini alırım.”</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Ann Nduku<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
 
-<p>Ve Kartal’ın kanatlarının gölgesi yere vurur vurmaz, Tavuk civcivlerini uyarırmış. “Açık ve düz yerlerden uzaklaşın.” Ve onlar cevap verirlermiş. “Aptal değiliz ki elbetre kaçacağız.”</p>
+<p>Ve Kartal’ın kanatlarının gölgesi yere vurur vurmaz, Tavuk civcivlerini uyarırmış. “Açık ve düz yerlerden uzaklaşın.” Ve onlar cevap verirlermiş. “Aptal değiliz ki elbette kaçacağız.”</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
