--- a/stories/tr/0158_horoz-ve-kartal_slides.html
+++ b/stories/tr/0158_horoz-ve-kartal_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p>Iyi bir gece uykusundan sonra, Tavuğun aklına parlak bir fikir gelmiş. Kuş arkadaşlarından dökülen tüyleri toplamaya başlamış. &quot;Gel bu tüyleri birleştirip dikelim ve kendi kanatlarımızın üzerine ekleyelim,&quot; demiş Horoz. &quot;Belki daha kolay yolculuk yapmamızı sağlar.&quot;</p>
+<p>İyi bir gece uykusundan sonra, Tavuğun aklına parlak bir fikir gelmiş. Kuş arkadaşlarından dökülen tüyleri toplamaya başlamış. &quot;Gel bu tüyleri birleştirip dikelim ve kendi kanatlarımızın üzerine ekleyelim,&quot; demiş Horoz. &quot;Belki daha kolay yolculuk yapmamızı sağlar.&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p>&quot;Bana bir gün izin ver,&quot; diye yalvarmış Tavuk. &quot;Sonra kanadını tamir edip gene yemek aramak için uçarsın.&quot; &quot;Sadece bir gün ama,&quot; demiş Kartal. &quot;Eğer iğneyi bulamazsan karşilığında civcivlerinden birini alırım.&quot;</p>
+<p>&quot;Bana bir gün izin ver,&quot; diye yalvarmış Tavuk. &quot;Sonra kanadını tamir edip gene yemek aramak için uçarsın.&quot; &quot;Sadece bir gün ama,&quot; demiş Kartal. &quot;Eğer iğneyi bulamazsan karşılığında civcivlerinden birini alırım.&quot;</p>
 <center>
 <strong>8</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p>Ve Kartal'ın kanatlarının gölgesi yere vurur vurmaz, Tavuk civcivlerini uyarırmış. &quot;Açık ve düz yerlerden uzaklaşın.&quot; Ve onlar cevap verirlermiş. &quot;Aptal değiliz ki elbetre kaçacağız.&quot;</p>
+<p>Ve Kartal'ın kanatlarının gölgesi yere vurur vurmaz, Tavuk civcivlerini uyarırmış. &quot;Açık ve düz yerlerden uzaklaşın.&quot; Ve onlar cevap verirlermiş. &quot;Aptal değiliz ki elbette kaçacağız.&quot;</p>
 <center>
 <strong>10</strong>
 </center>
