--- a/stories/tr/0201_eşek-çocuk.html
+++ b/stories/tr/0201_eşek-çocuk.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Eşek Çocuk</title>
+    <title>Eşek çocuk</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/01.jpg" />
 
-<h1 id="eek-ocuk">Eşek Çocuk</h1>
+<h1 id="eek-ocuk">Eşek çocuk</h1>
 
 Lindiwe Matshikiza<br>Türkçe</div><div class="pagebreak">
 
@@ -63,7 +63,7 @@ Lindiwe Matshikiza<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
 
-<p>Küçük kız utanarak ama cesaretle kadına biraz daha yaklaşmış. Küçük kızın ailesi “Bu kadın bizimle kalmalı,” diye düşünmüşler. “Onu ve çocuğunu korumamız lâzım.”</p>
+<p>Küçük kız utanarak ama cesaretle kadına biraz daha yaklaşmış. Küçük kızın ailesi “Bu kadın bizimle kalmalı,” diye düşünmüşler. “Onu ve çocuğunu korumamız lazım.”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Lindiwe Matshikiza<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
 
-<p>Kaçmayı bıraktığında gece olmuşmuş. Nerde olduğunu bilmiyormuş. Eşek kaybolmuş. “Aaaaa iiiii?” diye fısıldamış karanlığa doğru. Sesi eko yapıp geri gelmiş. “Aaaaa iiiii?” Yapayalnızmış. Olduğu yerde kıvrılıp huzursuzca bir uykuya dalmış.</p>
+<p>Kaçmayı bıraktığında gece olmuşmuş. Nerede olduğunu bilmiyormuş. Eşek kaybolmuş. “Aaaaa iiiii?” diye fısıldamış karanlığa doğru. Sesi eko yapıp geri gelmiş. “Aaaaa iiiii?” Yapayalnızmış. Olduğu yerde kıvrılıp huzursuzca bir uykuya dalmış.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
@@ -147,14 +147,14 @@ Lindiwe Matshikiza<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/16.jpg" /></p>
 
-<p>Bir sabah yaşlı adam ondan kendisini dağın tepesine çıkartmasıni istemiş.</p>
+<p>Bir sabah yaşlı adam ondan kendisini dağın tepesine çıkartmasını istemiş.</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
 
-<p>Yukarda bulutların arasında beraberce uykuya dalmışlar. Eşek rüyasında annesinin hasta oldugunu ve ona seslendiğini görmüş. Ve hemen uyanmış.</p>
+<p>Yukarıda bulutların arasında beraberce uykuya dalmışlar. Eşek rüyasında annesinin hasta olduğunu ve ona seslendiğini görmüş. Ve hemen uyanmış.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
@@ -168,7 +168,7 @@ Lindiwe Matshikiza<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/19.jpg" /></p>
 
-<p>Eşek nihayetne yapması gerektiğini biliyormuş.</p>
+<p>Eşek nihayet ne yapması gerektiğini biliyormuş.</p>
 
 <div class="pagenum">18</div>
 <p></div><div class="pagebreak"></p>
