--- a/stories/tr/0201_eşek-çocuk_slides.html
+++ b/stories/tr/0201_eşek-çocuk_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Eşek Çocuk - Global African Storybook</title>
+  <title>Eşek çocuk - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="eşek-çocuk" class="slide level1">
-<h1>Eşek Çocuk</h1>
+<h1>Eşek çocuk</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/01.jpg" />
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
-<p>Küçük kız utanarak ama cesaretle kadına biraz daha yaklaşmış. Küçük kızın ailesi &quot;Bu kadın bizimle kalmalı,&quot; diye düşünmüşler. &quot;Onu ve çocuğunu korumamız lâzım.&quot;</p>
+<p>Küçük kız utanarak ama cesaretle kadına biraz daha yaklaşmış. Küçük kızın ailesi &quot;Bu kadın bizimle kalmalı,&quot; diye düşünmüşler. &quot;Onu ve çocuğunu korumamız lazım.&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
-<p>Kaçmayı bıraktığında gece olmuşmuş. Nerde olduğunu bilmiyormuş. Eşek kaybolmuş. &quot;Aaaaa iiiii?&quot; diye fısıldamış karanlığa doğru. Sesi eko yapıp geri gelmiş. &quot;Aaaaa iiiii?&quot; Yapayalnızmış. Olduğu yerde kıvrılıp huzursuzca bir uykuya dalmış.</p>
+<p>Kaçmayı bıraktığında gece olmuşmuş. Nerede olduğunu bilmiyormuş. Eşek kaybolmuş. &quot;Aaaaa iiiii?&quot; diye fısıldamış karanlığa doğru. Sesi eko yapıp geri gelmiş. &quot;Aaaaa iiiii?&quot; Yapayalnızmış. Olduğu yerde kıvrılıp huzursuzca bir uykuya dalmış.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/16.jpg" /></p>
-<p>Bir sabah yaşlı adam ondan kendisini dağın tepesine çıkartmasıni istemiş.</p>
+<p>Bir sabah yaşlı adam ondan kendisini dağın tepesine çıkartmasını istemiş.</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
-<p>Yukarda bulutların arasında beraberce uykuya dalmışlar. Eşek rüyasında annesinin hasta oldugunu ve ona seslendiğini görmüş. Ve hemen uyanmış.</p>
+<p>Yukarıda bulutların arasında beraberce uykuya dalmışlar. Eşek rüyasında annesinin hasta olduğunu ve ona seslendiğini görmüş. Ve hemen uyanmış.</p>
 <center>
 <strong>16</strong>
 </center>
@@ -250,7 +250,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/19.jpg" /></p>
-<p>Eşek nihayetne yapması gerektiğini biliyormuş.</p>
+<p>Eşek nihayet ne yapması gerektiğini biliyormuş.</p>
 <center>
 <strong>18</strong>
 </center>
@@ -276,7 +276,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="eşek-çocuk-1">Eşek Çocuk</h2>
+<h2 id="eşek-çocuk-1">Eşek çocuk</h2>
 <strong>Text:</strong> Lindiwe Matshikiza<br> <strong>Illustrations:</strong> Meghan Judge<br> <strong>Translation:</strong> Leyla Tekül<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
