--- a/stories/tr/0210_tingi-ve-inekler.html
+++ b/stories/tr/0210_tingi-ve-inekler.html
@@ -70,7 +70,7 @@ Ingrid Schechter<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/05.jpg" /></p>
 
-<p>Inekleri alıp götürmüşler.</p>
+<p>İnekleri alıp götürmüşler.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Ingrid Schechter<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/12.jpg" /></p>
 
-<p>Yavaşça, dikkatle ve sessice evlerine doğru hareket etmişler.</p>
+<p>Yavaşça, dikkatle ve sessizce evlerine doğru hareket etmişler.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
