--- a/stories/tr/0210_tingi-ve-inekler_slides.html
+++ b/stories/tr/0210_tingi-ve-inekler_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/05.jpg" /></p>
-<p>Inekleri alıp götürmüşler.</p>
+<p>İnekleri alıp götürmüşler.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/12.jpg" /></p>
-<p>Yavaşça, dikkatle ve sessice evlerine doğru hareket etmişler.</p>
+<p>Yavaşça, dikkatle ve sessizce evlerine doğru hareket etmişler.</p>
 <center>
 <strong>11</strong>
 </center>
