--- a/stories/tr/0234_futbol-yıldızı-andiswa.html
+++ b/stories/tr/0234_futbol-yıldızı-andiswa.html
@@ -49,7 +49,7 @@ Eden Daniels<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
 
-<p>Andiswa erkek çocukların futbol oynamasını izledi. Hep onlara katılmak istedi. Hocalarına onlarla birlikte çalışıp çalışamayacağıni sordu.</p>
+<p>Andiswa erkek çocukların futbol oynamasını izledi. Hep onlara katılmak istedi. Hocalarına onlarla birlikte çalışıp çalışamayacağını sordu.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -63,14 +63,14 @@ Eden Daniels<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
 
-<p>Çocuklar ona gidip voleybol oynamasını, voleybolun kızlar için daha uygun oldugunu, futbolun erkek oyunu olduğunu soylediler. Andiswa çok üzüldü.</p>
+<p>Çocuklar ona gidip voleybol oynamasını, voleybolun kızlar için daha uygun olduğunu, futbolun erkek oyunu olduğunu söylediler. Andiswa çok üzüldü.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
 
-<p>Ertesi gün, okulun büyük bir futbol maçı vardı. Hoca çok telaşlıydı çünkü en iyi oyuncusu hastalanmışti ve oynaması mümkün değildi.</p>
+<p>Ertesi gün, okulun büyük bir futbol maçı vardı. Hoca çok telaşlıydı çünkü en iyi oyuncusu hastalanmıştı ve oynaması mümkün değildi.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,14 +84,14 @@ Eden Daniels<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
 
-<p>Maç çok zorluydu. Ilk yarıda kimse gol atamadı.</p>
+<p>Maç çok zorluydu. İlk yarıda kimse gol atamadı.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
 
-<p>Maçın ikinci yarısında çocuklar topu Andiswa’ya pasladılar. Andiswa büyük bir hızla kaleye doğru koştu. Topa kuvvetlice vurdu ve onu ağlara gonderip golünü attı.</p>
+<p>Maçın ikinci yarısında çocuklar topu Andiswa’ya pasladılar. Andiswa büyük bir hızla kaleye doğru koştu. Topa kuvvetlice vurdu ve onu ağlara gönderip golünü attı.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
