--- a/stories/tr/0262_magozwe.html
+++ b/stories/tr/0262_magozwe.html
@@ -56,21 +56,21 @@ Lesley Koyi<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/03.jpg" /></p>
 
-<p>Magozwe’nin anne ve babası öldüğünde o daha beş yaşında imiş. O da amcasıyla yaşamaya başlamış. Amcasi çocukla hiç ilgilenmemiş. Magozwe’ye hiç yeteri kadar yemek vermemiş. Onu hep ağır işlerde çalıştırmış.</p>
+<p>Magozwe’nin anne ve babası öldüğünde o daha beş yaşında imiş. O da amcasıyla yaşamaya başlamış. Amcası çocukla hiç ilgilenmemiş. Magozwe’ye hiç yeteri kadar yemek vermemiş. Onu hep ağır işlerde çalıştırmış.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/04.jpg" /></p>
 
-<p>Magozwe soru sorduğunda veya şikayet ettiğinde amcası onu hep dövmüş. Okula gitmek istediğini soyleyen Magozwe’ye, “Sen aptalın tekisin. Hiç bir şey öğrenemezsin”, demiş. Üç yıl boyunca böyle bir eziyetten sonra Magozwe amcasının evinden kaçmış. Sokaklarda yaşamaya başlamış.</p>
+<p>Magozwe soru sorduğunda veya şikayet ettiğinde amcası onu hep dövmüş. Okula gitmek istediğini söyleyen Magozwe’ye, “Sen aptalın tekisin. Hiç bir şey öğrenemezsin,” demiş. Üç yıl boyunca böyle bir eziyetten sonra Magozwe amcasının evinden kaçmış. Sokaklarda yaşamaya başlamış.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/05.jpg" /></p>
 
-<p>Sokak hayatı çok zormuş. Çocukların çoğu yemek bulmakta zorlanıyormuş. Bazen yakalanıp tutuklanıyor, bazen de dayak yiyiorlarmış. Hastalandıklarında yardım edecek kimseleri yokmuş. Grupdaki çocuklar dilenerek yada topladıkları çöpleri satarak biriktirdikleri parayla geçinmek zorundaymış. Şehirde egemenlik kurmak isteyen diğer rakip gruplarla da savaşmaları gerektiğinden hayat daha da zorlaşıyormuş.</p>
+<p>Sokak hayatı çok zormuş. Çocukların çoğu yemek bulmakta zorlanıyormuş. Bazen yakalanıp tutuklanıyor, bazen de dayak yiyorlarmış. Hastalandıklarında yardım edecek kimseleri yokmuş. Gruptaki çocuklar dilenerek yada topladıkları çöpleri satarak biriktirdikleri parayla geçinmek zorundaymış. Şehirde egemenlik kurmak isteyen diğer rakip gruplarla da savaşmaları gerektiğinden hayat daha da zorlaşıyormuş.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Lesley Koyi<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
 
-<p>Soğuk bir günde Magozwe yol kenarında durup dileniyormuş. Bir adam ona yaklaşıp şöyle demiş, “Merhaba benim adım Thomas. Burda yakında, senin yemek yiyebileceğin bir yerde çalışıyorum.” Eliyle mavi renk çatısı olan sarı bir binayı göstermiş adam. “Umarım oraya gidip yemek yersin ha?” diye sormuş. Magozwe adama ve sonra eve bakmış. “Belki,” demiş ve ordan ayrılmış.</p>
+<p>Soğuk bir günde Magozwe yol kenarında durup dileniyormuş. Bir adam ona yaklaşıp şöyle demiş, “Merhaba benim adım Thomas. Burada yakında, senin yemek yiyebileceğin bir yerde çalışıyorum.” Eliyle mavi renk çatısı olan sarı bir binayı göstermiş adam. “Umarım oraya gidip yemek yersin ha?” diye sormuş. Magozwe adama ve sonra eve bakmış. “Belki,” demiş ve oradan ayrılmış.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Lesley Koyi<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
 
-<p>Magozwe bu bahsedilen okulu ve okula gitmeyi düşünmeye başlamış. Ya amcası haklı çıkarsa? Ya gerçekten onun dediği gibi birşey öğrenemeyecek kadar aptalsa? Ya bu yeni yerde dayak yerse? İçini bir korku sarmış. “Belki de sokakta kalmam daha iyi,” diye düşünmüş.</p>
+<p>Magozwe bu bahsedilen okulu ve okula gitmeyi düşünmeye başlamış. Ya amcası haklı çıkarsa? Ya gerçekten onun dediği gibi bir şey öğrenemeyecek kadar aptalsa? Ya bu yeni yerde dayak yerse? İçini bir korku sarmış. “Belki de sokakta kalmam daha iyi,” diye düşünmüş.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
@@ -140,14 +140,14 @@ Lesley Koyi<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/15.jpg" /></p>
 
-<p>Böylece Thomas yeşili çatılı yeni bir evdeki bir odaya yerleşmiş. Iki de oda arkadaşı varmış. Toplam 10 çocuk kalıyormuş burada. Evde ayrıca Cissy Teyze ve kocası, üç köpek bir kedi bir de keçi yaşıyormuş.</p>
+<p>Böylece Thomas yeşili çatılı yeni bir evdeki bir odaya yerleşmiş. İki de oda arkadaşı varmış. Toplam 10 çocuk kalıyormuş burada. Evde ayrıca Cissy Teyze ve kocası, üç köpek bir kedi bir de keçi yaşıyormuş.</p>
 
 <div class="pagenum">14</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/16.jpg" /></p>
 
-<p>Magozwe okula başlamış ama tabii çok zormuş. Geri kaldığı bir sürü şeyi öğrenerek sınıfın seviyesine yetişmesi gerekiyormuş. Bazen umdunu yitirip vazgeçmeyi düşündüğu de oluyormuş. Ama sonra pilot ve futbolcu olan çocukların hikayesi geliyormuş aklına. Tıpkı onlar gibi o da pes etmemeliymiş.</p>
+<p>Magozwe okula başlamış ama tabii çok zormuş. Geri kaldığı bir sürü şeyi öğrenerek sınıfın seviyesine yetişmesi gerekiyormuş. Bazen umdunu yitirip vazgeçmeyi düşündüğü de oluyormuş. Ama sonra pilot ve futbolcu olan çocukların hikayesi geliyormuş aklına. Tıpkı onlar gibi o da pes etmemeliymiş.</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
