--- a/stories/tr/0291_vusinin-ablası-ne-demiş_slides.html
+++ b/stories/tr/0291_vusinin-ablası-ne-demiş_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/03.jpg" /></p>
-<p>Vusi ailesinin yanına giderken, meyva toplayan iki çocuk görmüş. Cocuklardan biri Vusi'nin elindeki yumurtalardan birini alıp ağaca firlatmış. Yumurta kırılmış.</p>
+<p>Vusi ailesinin yanına giderken, meyve toplayan iki çocuk görmüş. Çocuklardan biri Vusi'nin elindeki yumurtalardan birini alıp ağaca fırlatmış. Yumurta kırılmış.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
-<p>&quot;Ne yaptınız?&quot; diye ağlamaya başlamış Vusi. &quot;O baston ablamın düğün hediyesiydi. Meyva toplayan çocuklar vermişti bana çünkü, pasta için gereken yumurtayı kırmışlardı. Pasta ablamın düğünü için lazımdı. Şimdi yumurta yok, baston yok. Ablam ne diyecek?&quot;</p>
+<p>&quot;Ne yaptınız?&quot; diye ağlamaya başlamış Vusi. &quot;O baston ablamın düğün hediyesiydi. Meyve toplayan çocuklar vermişti bana çünkü, pasta için gereken yumurtayı kırmışlardı. Pasta ablamın düğünü için lazımdı. Şimdi yumurta yok, baston yok. Ablam ne diyecek?&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
-<p>Ev yapanlar bastonu kırdıklarına çok üzülmüşler. &quot;Pasta icin yardımcı olamayız ama bak sana bu saman demetini verelim, ablana onu götür,&quot; demiş bir tanesi. Ve Vusi yoluna devam etmiş.</p>
+<p>Ev yapanlar bastonu kırdıklarına çok üzülmüşler. &quot;Pasta için yardımcı olamayız ama bak sana bu saman demetini verelim, ablana onu götür,&quot; demiş bir tanesi. Ve Vusi yoluna devam etmiş.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/09.jpg" /></p>
-<p>Yolda bir çiftçi ve bir ineğe rastlamış. &quot;Ne güzel saman, bir parça alabilir miyim?&quot; diye sormuş inek. Ama saman öyle lezzetliymişki inek bütün demeti yemiş bitirmiş.</p>
+<p>Yolda bir çiftçi ve bir ineğe rastlamış. &quot;Ne güzel saman, bir parça alabilir miyim?&quot; diye sormuş inek. Ama saman öyle lezzetliymiş ki inek bütün demeti yemiş bitirmiş.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
-<p>&quot;Ne yaptın?&quot; diye ağlamaya başlamış Vusi. &quot;O saman ablamın düğün hediyesiydi. Bana ev yapan adamlar vermişti, çünkü meyva toplayan çocukların verdiği bastonu kırmışlardı. Meyva toplayan çocuklar ablamın pastası için gereken yumurtayı kırmışlardı. O pasta ablamın düğün pastası olacaktı. Şimdi yumurta yok, pasta yok, hediye yok. Ablam ne diyecek?&quot;</p>
+<p>&quot;Ne yaptın?&quot; diye ağlamaya başlamış Vusi. &quot;O saman ablamın düğün hediyesiydi. Bana ev yapan adamlar vermişti, çünkü meyve toplayan çocukların verdiği bastonu kırmışlardı. Meyve toplayan çocuklar ablamın pastası için gereken yumurtayı kırmışlardı. O pasta ablamın düğün pastası olacaktı. Şimdi yumurta yok, pasta yok, hediye yok. Ablam ne diyecek?&quot;</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/11.jpg" /></p>
-<p>Inek açgözlülük ettiği için çok üzülmüş. Çiftçi de Vusi'nin ablasına ineği hediye olarak götürmesini kabul etmiş. Ve Vusi yoluna devam etmiş.</p>
+<p>İnek açgözlülük ettiği için çok üzülmüş. Çiftçi de Vusi'nin ablasına ineği hediye olarak götürmesini kabul etmiş. Ve Vusi yoluna devam etmiş.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/13.jpg" /></p>
-<p>&quot;Ben ne yapayım şimdi?&quot; diye ağlamaya başlamış Vusi. &quot;Inek çiftçiye geri döndü, o hediye olacaktı. Çiftçi bana saman karşılığında vermişti. Ev yapanlar da bana samanı kırdıkları baston karşılığında vermişlerdi. Bastonu da meyva toplayanlar vermişti çünkü yumurtayı kırmışlardı. Şimdi yumurta yok, pasta yok, hediye yok.&quot;</p>
+<p>&quot;Ben ne yapayım şimdi?&quot; diye ağlamaya başlamış Vusi. &quot;İnek çiftçiye geri döndü, o hediye olacaktı. Çiftçi bana saman karşılığında vermişti. Ev yapanlar da bana samanı kırdıkları baston karşılığında vermişlerdi. Bastonu da meyve toplayanlar vermişti çünkü yumurtayı kırmışlardı. Şimdi yumurta yok, pasta yok, hediye yok.&quot;</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/14.jpg" /></p>
-<p>Vusi'nin ablası biraz düşündükten sonra şöyle demiş, &quot;Vusi, sevgili kardeşim, hediye benim için önemli değil. Düğün pastası da olmazsa sorun değil. Burda hep beraberiz ve ben çok mutluyum. Hadi şimdi git güzel giysilerini giy bu günü hep beraber kutlayalım!&quot; Ve böylece Vusi de ablasının dediğini yapmış.</p>
+<p>Vusi'nin ablası biraz düşündükten sonra şöyle demiş, &quot;Vusi, sevgili kardeşim, hediye benim için önemli değil. Düğün pastası da olmazsa sorun değil. Burada hep beraberiz ve ben çok mutluyum. Hadi şimdi git güzel giysilerini giy bu günü hep beraber kutlayalım!&quot; Ve böylece Vusi de ablasının dediğini yapmış.</p>
 <center>
 <strong>13</strong>
 </center>
