--- a/stories/tr/0294_büyükannemin-muzları_slides.html
+++ b/stories/tr/0294_büyükannemin-muzları_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
-<p>Büyükannemin bahçesinde bütün güzel meyvalardan vardı. Ama en iyileri muzlardı. Büyükannenin bir çok torunu olduğu halde beni özellikle sevdiğini gizliden gizliye biliyordum. Beni sık sık evine davet ederdi. Hatta benimle küçük sırlarını da paylaşırdı. Benimle paylaşmadıği bir sırrı vardı : muzları nerde olgunlaştırdıği.</p>
+<p>Büyükannemin bahçesinde bütün güzel meyvelerden vardı. Ama en iyileri muzlardı. Büyükannenin bir çok torunu olduğu halde beni özellikle sevdiğini gizliden gizliye biliyordum. Beni sık sık evine davet ederdi. Hatta benimle küçük sırlarını da paylaşırdı. Benimle paylaşmadığı bir sırrı vardı : muzları nerede olgunlaştırdığı.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
-<p>Bir gün Büyükannemin evinin dışında samandan yapılmış büyük bir sepet gördüm. Ne olduğunu sorduğumda sadece &quot;Benim sihirli sepetim,&quot; dedi. Sepetin yanında büyükannemin zaman zaman ters yüz ettiği muz yaprakları vardı. Merak etmiştim. &quot;Bu yapraklar ne işe yariyor büyükanne?&quot; Tek aldığım cevap şuydu, &quot;Onlar benim sihirli yapraklarım.&quot;</p>
+<p>Bir gün Büyükannemin evinin dışında samandan yapılmış büyük bir sepet gördüm. Ne olduğunu sorduğumda sadece &quot;Benim sihirli sepetim,&quot; dedi. Sepetin yanında büyükannemin zaman zaman ters yüz ettiği muz yaprakları vardı. Merak etmiştim. &quot;Bu yapraklar ne işe yarıyor büyükanne?&quot; Tek aldığım cevap şuydu, &quot;Onlar benim sihirli yapraklarım.&quot;</p>
 <center>
 <strong>2</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
-<p>Geri döndüğümde büyükannem dışarda oturuyordu ama görünürde ne sepet ne de muzlar vardı. &quot;Büyükanne, sepet nerde, muzlar nerde....&quot; Ama aldığım tek cevap şuydu, &quot;Benim sihirli yerimdeler.&quot; Çok can sıkıcı bir durumdu.</p>
+<p>Geri döndüğümde büyükannem dışarıda oturuyordu ama görünürde ne sepet ne de muzlar vardı. &quot;Büyükanne, sepet nerede, muzlar nerede....&quot; Ama aldığım tek cevap şuydu, &quot;Benim sihirli yerimdeler.&quot; Çok can sıkıcı bir durumdu.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
-<p>Iki gün sonra, büyükannem beni yatak odasından bastonunu getirmeye gönderdi. Odanın kapısını açar açmaz olgunlaşmakta olan muzların keskin kokusunu duydum. İçerdeki odada büyükannenin büyük saman sepeti vardı. Eski bir battaniye ile örülmüştü. Örtüyü kaldırıp o nefis kokuyu içime çektim.</p>
+<p>İki gün sonra, büyükannem beni yatak odasından bastonunu getirmeye gönderdi. Odanın kapısını açar açmaz olgunlaşmakta olan muzların keskin kokusunu duydum. İçerdeki odada büyükannenin büyük saman sepeti vardı. Eski bir battaniye ile örülmüştü. Örtüyü kaldırıp o nefis kokuyu içime çektim.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
-<p>Büyükannenin sesiyle irkildim. &quot;Haydi, nerde kaldın? Çabuk bastonumu getir bana.&quot; Hemen bastonunu ona yetiştirdim. &quot;Neden gülümsüyorsun sen?&quot; diye sordu büyükannem. O anda farkettim ki onun sihirli yerinin sırrını keşfettiğim için hâlâ gülümsüyordum.</p>
+<p>Büyükannenin sesiyle irkildim. &quot;Haydi, nerede kaldın? Çabuk bastonumu getir bana.&quot; Hemen bastonunu ona yetiştirdim. &quot;Neden gülümsüyorsun sen?&quot; diye sordu büyükannem. O anda fark ettim ki onun sihirli yerinin sırrını keşfettiğim için hâlâ gülümsüyordum.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
-<p>Ertesi gün büyükannem annemi ziyarete geldiğinde hemen onun evine koşup muzlara bir kez daha baktım. Bir sürüsü olgunlaşmıştı. Birini alıp elbisemin içine sakladım. Sepeti tekrar örttükten sonra evin arkasına geçip onu çabucak yedim. Simdiye kadar yediğim en lezzetli muzdu.</p>
+<p>Ertesi gün büyükannem annemi ziyarete geldiğinde hemen onun evine koşup muzlara bir kez daha baktım. Bir sürüsü olgunlaşmıştı. Birini alıp elbisemin içine sakladım. Sepeti tekrar örttükten sonra evin arkasına geçip onu çabucak yedim. Şimdiye kadar yediğim en lezzetli muzdu.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
-<p>Sonraki gün, büyükannem bahçede sebze toplarken, gene gizlice muzlara bakmaya gittim. Aşağı yukarı hepsi olgunlaşmıştı. Dayanamayıp dört tanesini aldım. Yavaşça kapıya yaklaştığımda, büyükannemin dışarda öksürdüğünü duydum. Hemen muzları elbisemde saklayıp yanından yürüyüp geçtim.</p>
+<p>Sonraki gün, büyükannem bahçede sebze toplarken, gene gizlice muzlara bakmaya gittim. Aşağı yukarı hepsi olgunlaşmıştı. Dayanamayıp dört tanesini aldım. Yavaşça kapıya yaklaştığımda, büyükannemin dışarıda öksürdüğünü duydum. Hemen muzları elbisemde saklayıp yanından yürüyüp geçtim.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
-<p>Ertesi gün semt pazarı günüydü. Büyükannem hep erkenden uyanıp olgunlaşan muzları ve diger meyvaları toplar pazara satmaya götürürdü. O gün onu ziyaret etmek için çok acele etmedim. Ama yakında nasılsa görecektim.</p>
+<p>Ertesi gün semt pazarı günüydü. Büyükannem hep erkenden uyanıp olgunlaşan muzları ve diğer meyveleri toplar pazara satmaya götürürdü. O gün onu ziyaret etmek için çok acele etmedim. Ama yakında nasılsa görecektim.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
-<p>O akşam annem babam ve büyükannem toplanıp beni yanlarına çağırdılar. Ne diyeceklerini biliyordum. O gece yatağıma yattığımda bir daha hiç birşey çalamayacağımı da biliyordum, ne büyükannemden, ne annemden, ne babamdan, ve tabiiki ne de herhangi bir kimseden.</p>
+<p>O akşam annem babam ve büyükannem toplanıp beni yanlarına çağırdılar. Ne diyeceklerini biliyordum. O gece yatağıma yattığımda bir daha hiç bir şey çalamayacağımı da biliyordum, ne büyükannemden, ne annemden, ne babamdan, ve tabii ki ne de herhangi bir kimseden.</p>
 <center>
 <strong>10</strong>
 </center>
