--- a/stories/tr/0302_ateş.html
+++ b/stories/tr/0302_ateş.html
@@ -91,14 +91,14 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>Türkçe</div><d
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
 
-<p>Ateş harika birşeydir.</p>
+<p>Ateş harika bir şeydir.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/09.jpg" /></p>
 
-<p>Ates güçlüdür.</p>
+<p>Ateş güçlüdür.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
