--- a/stories/tr/0315_sakimanın-şarkısı.html
+++ b/stories/tr/0315_sakimanın-şarkısı.html
@@ -70,14 +70,14 @@ Ursula Nafula<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/05.jpg" /></p>
 
-<p>Sakima nın annesiyle babası zengin bir adamın evinde çalışıyorlardı. Evden erken çıkıyor ve eve geç dönüyorlardı. Sakima evde küçük kardeşiyle kalıyordu.</p>
+<p>Sakima’nın annesiyle babası zengin bir adamın evinde çalışıyorlardı. Evden erken çıkıyor ve eve geç dönüyorlardı. Sakima evde küçük kardeşiyle kalıyordu.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/06.jpg" /></p>
 
-<p>Sakima şarkı söylemeyi çok seviyordu. Bir gün annesi sordu, “Sakima sen nerden öğreniyorsun bu şarkıları?”</p>
+<p>Sakima şarkı söylemeyi çok seviyordu. Bir gün annesi sordu, “Sakima sen nereden öğreniyorsun bu şarkıları?”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -105,7 +105,7 @@ Ursula Nafula<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/10.jpg" /></p>
 
-<p>Bir akşamüstü, büyükler eve döndügünde hiç konuşmuyorlardı. Sakima birşeylerin ters gittiğini anlamıştı.</p>
+<p>Bir akşamüstü, büyükler eve döndüğünde hiç konuşmuyorlardı. Sakima bir şeylerin ters gittiğini anlamıştı.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -147,14 +147,14 @@ Ursula Nafula<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/16.jpg" /></p>
 
-<p>İşçiler işlerini bıraktılar. Sakima’ nın güzel şarkısını dinlemeye başladılar. Ancak bir adam şöyle dedi, “Bizim patronu hiç kimse teselli edemedi, bu kör çocuk nasıl onu teselli edeceğini düşünebiliyor?”</p>
+<p>İşçiler işlerini bıraktılar. Sakima’nın güzel şarkısını dinlemeye başladılar. Ancak bir adam şöyle dedi, “Bizim patronu hiç kimse teselli edemedi, bu kör çocuk nasıl onu teselli edeceğini düşünebiliyor?”</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/17.jpg" /></p>
 
-<p>Sakima şarkısını bitirdi ve tam geri donmek üzereydi ki adam ona seslendi, “Lütfen şarkını bir kere daha söyle.”</p>
+<p>Sakima şarkısını bitirdi ve tam geri dönmek üzereydi ki adam ona seslendi, “Lütfen şarkını bir kere daha söyle.”</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
@@ -168,7 +168,7 @@ Ursula Nafula<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/19.jpg" /></p>
 
-<p>Zengin adam oğluna kavuştuğu için çok mutlu olmuştu. Sakima’yı onu teselli ettiği için ödüllendirildi. Oğlunu ve Sakima’yı hastaneye götürdü. Boylece Sakima da artık tedavi olabilecek ve gözleri yeniden görebilecekti.</p>
+<p>Zengin adam oğluna kavuştuğu için çok mutlu olmuştu. Sakima’yı onu teselli ettiği için ödüllendirildi. Oğlunu ve Sakima’yı hastaneye götürdü. Böylece Sakima da artık tedavi olabilecek ve gözleri yeniden görebilecekti.</p>
 
 <div class="pagenum">18</div>
 <p></div><div class="pagebreak"></p>
