--- a/stories/tr/0315_sakimanın-şarkısı_slides.html
+++ b/stories/tr/0315_sakimanın-şarkısı_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/05.jpg" /></p>
-<p>Sakima nın annesiyle babası zengin bir adamın evinde çalışıyorlardı. Evden erken çıkıyor ve eve geç dönüyorlardı. Sakima evde küçük kardeşiyle kalıyordu.</p>
+<p>Sakima'nın annesiyle babası zengin bir adamın evinde çalışıyorlardı. Evden erken çıkıyor ve eve geç dönüyorlardı. Sakima evde küçük kardeşiyle kalıyordu.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/06.jpg" /></p>
-<p>Sakima şarkı söylemeyi çok seviyordu. Bir gün annesi sordu, &quot;Sakima sen nerden öğreniyorsun bu şarkıları?&quot;</p>
+<p>Sakima şarkı söylemeyi çok seviyordu. Bir gün annesi sordu, &quot;Sakima sen nereden öğreniyorsun bu şarkıları?&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/10.jpg" /></p>
-<p>Bir akşamüstü, büyükler eve döndügünde hiç konuşmuyorlardı. Sakima birşeylerin ters gittiğini anlamıştı.</p>
+<p>Bir akşamüstü, büyükler eve döndüğünde hiç konuşmuyorlardı. Sakima bir şeylerin ters gittiğini anlamıştı.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/16.jpg" /></p>
-<p>İşçiler işlerini bıraktılar. Sakima' nın güzel şarkısını dinlemeye başladılar. Ancak bir adam şöyle dedi, &quot;Bizim patronu hiç kimse teselli edemedi, bu kör çocuk nasıl onu teselli edeceğini düşünebiliyor?&quot;</p>
+<p>İşçiler işlerini bıraktılar. Sakima'nın güzel şarkısını dinlemeye başladılar. Ancak bir adam şöyle dedi, &quot;Bizim patronu hiç kimse teselli edemedi, bu kör çocuk nasıl onu teselli edeceğini düşünebiliyor?&quot;</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/17.jpg" /></p>
-<p>Sakima şarkısını bitirdi ve tam geri donmek üzereydi ki adam ona seslendi, &quot;Lütfen şarkını bir kere daha söyle.&quot;</p>
+<p>Sakima şarkısını bitirdi ve tam geri dönmek üzereydi ki adam ona seslendi, &quot;Lütfen şarkını bir kere daha söyle.&quot;</p>
 <center>
 <strong>16</strong>
 </center>
@@ -250,7 +250,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/19.jpg" /></p>
-<p>Zengin adam oğluna kavuştuğu için çok mutlu olmuştu. Sakima'yı onu teselli ettiği için ödüllendirildi. Oğlunu ve Sakima'yı hastaneye götürdü. Boylece Sakima da artık tedavi olabilecek ve gözleri yeniden görebilecekti.</p>
+<p>Zengin adam oğluna kavuştuğu için çok mutlu olmuştu. Sakima'yı onu teselli ettiği için ödüllendirildi. Oğlunu ve Sakima'yı hastaneye götürdü. Böylece Sakima da artık tedavi olabilecek ve gözleri yeniden görebilecekti.</p>
 <center>
 <strong>18</strong>
 </center>
