--- a/stories/tr/0324_evden-ayrılıp-şehre-gittiğim-gün.html
+++ b/stories/tr/0324_evden-ayrılıp-şehre-gittiğim-gün.html
@@ -91,7 +91,7 @@ Lesley Koyi, Ursula Nafula<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/08.jpg" /></p>
 
-<p>Otobüsün yüklenme işi bitmiş bütün yolcular yerlerine oturmuştu. Bazı satıcılar mallarini satmak için otobüse girmişlerdi. Herbiri ne satıyorsa bağıra bağıra pazarlıyordu. Ettikleri laflar cok komikti.</p>
+<p>Otobüsün yüklenme işi bitmiş bütün yolcular yerlerine oturmuştu. Bazı satıcılar mallarını satmak için otobüse girmişlerdi. Her biri ne satıyorsa bağıra bağıra pazarlıyordu. Ettikleri laflar çok komikti.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -140,14 +140,14 @@ Lesley Koyi, Ursula Nafula<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/15.jpg" /></p>
 
-<p>Yol esnasında hep amcamın büyük şehirde oturduğu yerin adını aklımda tutmaya çalıştım. Uykuya dalarken bile onu mırıldanıyordum.</p>
+<p>Yol sırasında hep amcamın büyük şehirde oturduğu yerin adını aklımda tutmaya çalıştım. Uykuya dalarken bile onu mırıldanıyordum.</p>
 
 <div class="pagenum">14</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
 
-<p>Dokuz saat sonra, bir vurma gürültüsüyle uyandım. Otobüse vurarak köyüme gitmek isteyen yolcuları cağırıyorlardı. Hemen küçük torbamı alıp otobüsten indim.</p>
+<p>Dokuz saat sonra, bir vurma gürültüsüyle uyandım. Otobüse vurarak köyüme gitmek isteyen yolcuları çağırıyorlardı. Hemen küçük torbamı alıp otobüsten indim.</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
