--- a/stories/tr/0327_hayvan-sayımı_slides.html
+++ b/stories/tr/0327_hayvan-sayımı_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/03.jpg" /></p>
-<p>Iki zürafa su içecek.</p>
+<p>İki zürafa su içecek.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
-<p>Üç buffalo ve dört kuş da su içecek.</p>
+<p>Üç bizon ve dört kuş da su içecek.</p>
 <center>
 <strong>3</strong>
 </center>
