--- a/stories/tr/0337_mum-çocuklar.html
+++ b/stories/tr/0337_mum-çocuklar.html
@@ -91,7 +91,7 @@ Southern African Folktale<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/08.jpg" /></p>
 
-<p>Ama artık çok geçmiş. Cocuk sıcak güneşin altında eriyivermiş.</p>
+<p>Ama artık çok geçmiş. Çocuk sıcak güneşin altında eriyivermiş.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
