--- a/stories/tr/0342_ceza.html
+++ b/stories/tr/0342_ceza.html
@@ -49,28 +49,28 @@ Adelheid Marie Bwire<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
 
-<p>Bir gün annemiz bir dolu meyvayla geliyor.</p>
+<p>Bir gün annemiz bir dolu meyveyle geliyor.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
 
-<p>“Ne zaman meyva yiyeceğiz?” diye soruyoruz. “Meyvaları bu gece yiyeceğiz,” diyor annemiz.</p>
+<p>“Ne zaman meyve yiyeceğiz?” diye soruyoruz. “Meyveleri bu gece yiyeceğiz,” diyor annemiz.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
 
-<p>Erkek kardeşim Rahim oldukça aç gözlüdür. Hemen bütün meyvaların tadına bakıyor. Ve bir çoğunu yiyor.</p>
+<p>Erkek kardeşim Rahim oldukça aç gözlüdür. Hemen bütün meyvelerin tadına bakıyor. Ve bir çoğunu yiyor.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
 
-<p>“Bak Rahim ne yapti!” diye bağıriyor küçük erkek kardeşim. “Rahim terbiyesiz ve bencil,” diyorum ben de.</p>
+<p>“Bak Rahim ne yaptı!” diye bağırıyor küçük erkek kardeşim. “Rahim terbiyesiz ve bencil,” diyorum ben de.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Adelheid Marie Bwire<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
 
-<p>Biz de Rahim’e kızıyorumz. Ama Rahim hiç aldırmıyor.</p>
+<p>Biz de Rahim’e kızıyoruz. Ama Rahim hiç aldırmıyor.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Adelheid Marie Bwire<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
 
-<p>Annemiz bunun böyle olacağını biliyordu. Rahim’in cezasını meyvalar veriyor.</p>
+<p>Annemiz bunun böyle olacağını biliyordu. Rahim’in cezasını meyveler veriyor.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
