--- a/stories/tr/0342_ceza_slides.html
+++ b/stories/tr/0342_ceza_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
-<p>Bir gün annemiz bir dolu meyvayla geliyor.</p>
+<p>Bir gün annemiz bir dolu meyveyle geliyor.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
-<p>&quot;Ne zaman meyva yiyeceğiz?&quot; diye soruyoruz. &quot;Meyvaları bu gece yiyeceğiz,&quot; diyor annemiz.</p>
+<p>&quot;Ne zaman meyve yiyeceğiz?&quot; diye soruyoruz. &quot;Meyveleri bu gece yiyeceğiz,&quot; diyor annemiz.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
-<p>Erkek kardeşim Rahim oldukça aç gözlüdür. Hemen bütün meyvaların tadına bakıyor. Ve bir çoğunu yiyor.</p>
+<p>Erkek kardeşim Rahim oldukça aç gözlüdür. Hemen bütün meyvelerin tadına bakıyor. Ve bir çoğunu yiyor.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
-<p>&quot;Bak Rahim ne yapti!&quot; diye bağıriyor küçük erkek kardeşim. &quot;Rahim terbiyesiz ve bencil,&quot; diyorum ben de.</p>
+<p>&quot;Bak Rahim ne yaptı!&quot; diye bağırıyor küçük erkek kardeşim. &quot;Rahim terbiyesiz ve bencil,&quot; diyorum ben de.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
-<p>Biz de Rahim'e kızıyorumz. Ama Rahim hiç aldırmıyor.</p>
+<p>Biz de Rahim'e kızıyoruz. Ama Rahim hiç aldırmıyor.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
-<p>Annemiz bunun böyle olacağını biliyordu. Rahim'in cezasını meyvalar veriyor.</p>
+<p>Annemiz bunun böyle olacağını biliyordu. Rahim'in cezasını meyveler veriyor.</p>
 <center>
 <strong>11</strong>
 </center>
