--- a/stories/tr/0002_hayvanlara-bak_slides.html
+++ b/stories/tr/0002_hayvanlara-bak_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Hayvanlara Bak - Global African Storybook</title>
+  <title>Hayvanlara bak - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="hayvanlara-bak" class="slide level1">
-<h1>Hayvanlara Bak</h1>
+<h1>Hayvanlara bak</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/01.jpg" />
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/03.jpg" /></p>
-<p>İnek ”Möö.” diyor.</p>
+<p>İnek &quot;Möö.&quot; diyor.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
-<p>Keçi ”Mee, Mee” diyor.</p>
+<p>Keçi &quot;Mee, Mee&quot; diyor.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/05.jpg" /></p>
-<p>At ”İhiii” diyor.</p>
+<p>At &quot;İhiii&quot; diyor.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
-<p>Domuz ”Öğrn.” diyor.</p>
+<p>Domuz &quot;Öğrn.&quot; diyor.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/07.jpg" /></p>
-<p>Tavuk ”Gıt gıt gıt.” diyor.</p>
+<p>Tavuk &quot;Gıt gıt gıt.&quot; diyor.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
-<p>Köpek ”Hav hav.” diyor.</p>
+<p>Köpek &quot;Hav hav.&quot; diyor.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/09.jpg" /></p>
-<p>Çiftçi ”Şşşt!” diyor.</p>
+<p>Çiftçi &quot;Şşşt!&quot; diyor.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,7 +168,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="hayvanlara-bak-1">Hayvanlara Bak</h2>
+<h2 id="hayvanlara-bak-1">Hayvanlara bak</h2>
 <strong>Text:</strong> Jenny Katz<br> <strong>Illustrations:</strong> Sandy Campbell<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
