--- a/stories/tr/0004_keçi-köpek-ve-i̇nek.html
+++ b/stories/tr/0004_keçi-köpek-ve-i̇nek.html
@@ -77,7 +77,7 @@ Fabian Wakholi<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
 
-<p>Taksici, bu durumdan çok rahatsız olmuş . Köpek’in parasının üstünü vermeden oradan uzaklaşmış.</p>
+<p>Taksici, bu durumdan çok rahatsız olmuş. Köpek’in parasının üstünü vermeden oradan uzaklaşmış.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Fabian Wakholi<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
 
-<p>Keçi araba sesinden kaçar. Ücretini odemediği için tutuklanmaktan korkar.</p>
+<p>Keçi araba sesinden kaçar. Ücretini ödemediği için tutuklanmaktan korkar.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
