--- a/stories/tr/0008_ne-yapıyorsun_slides.html
+++ b/stories/tr/0008_ne-yapıyorsun_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Ne Yapıyorsun? - Global African Storybook</title>
+  <title>Ne yapıyorsun? - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="ne-yapıyorsun" class="slide level1">
-<h1>Ne Yapıyorsun?</h1>
+<h1>Ne yapıyorsun?</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
 </center>
@@ -168,7 +168,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ne-yapıyorsun-1">Ne Yapıyorsun?</h2>
+<h2 id="ne-yapıyorsun-1">Ne yapıyorsun?</h2>
 <strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
