--- a/stories/tr/0030_duygular.html
+++ b/stories/tr/0030_duygular.html
@@ -56,7 +56,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Türkçe</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/03.jpg" /></p>
 
-<p>Akşam, büyük annem bize hikayeler anlatırken mutlu hissederim.</p>
+<p>Akşam, büyükannem bize hikayeler anlatırken mutlu hissederim.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -77,7 +77,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Türkçe</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
 
-<p>Annem bana sarıldığında sevilmiş hissederim.</p>
+<p>Annem bana sarıldığında sevildiğmi hissederim.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
