--- a/stories/tr/0030_duygular_slides.html
+++ b/stories/tr/0030_duygular_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/03.jpg" /></p>
-<p>Akşam, büyük annem bize hikayeler anlatırken mutlu hissederim.</p>
+<p>Akşam, büyükannem bize hikayeler anlatırken mutlu hissederim.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
-<p>Annem bana sarıldığında sevilmiş hissederim.</p>
+<p>Annem bana sarıldığında sevildiğmi hissederim.</p>
 <center>
 <strong>5</strong>
 </center>
