--- a/stories/tr/0066_nozibele-ve-üç-saç-teli.html
+++ b/stories/tr/0066_nozibele-ve-üç-saç-teli.html
@@ -49,7 +49,7 @@ Tessa Welch<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
 
-<p>Çok uzun zaman önce, üç kız arkadaş odun toplamaya gitmisler.</p>
+<p>Çok uzun zaman önce, üç kız arkadaş odun toplamaya gitmişler.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -63,7 +63,7 @@ Tessa Welch<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
 
-<p>Sonra bir anda geç kaldıklarını farkedip köye doğru koşmaya başlamışlar.</p>
+<p>Sonra bir anda geç kaldıklarını fark edip köye doğru koşmaya başlamışlar.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -91,14 +91,14 @@ Tessa Welch<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
 
-<p>Kapıyı bir köpek açınca cok şaşırmış. “Ne istiyorsun?” demiş köpek. Nozibele de “Evimin yolunu kaybettim, kalacak yere ihtiyacım var,” demiş. Köpek “İçeri gel yoksa seni ısırırım!” deyince, Nozibele içeri girmiş.</p>
+<p>Kapıyı bir köpek açınca çok şaşırmış. “Ne istiyorsun?” demiş köpek. Nozibele de “Evimin yolunu kaybettim, kalacak yere ihtiyacım var,” demiş. Köpek “İçeri gel yoksa seni ısırırım!” deyince, Nozibele içeri girmiş.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
 
-<p>Köpek “Bana yemek pişir!” demiş. “Ama ben hiç bir köpeğe yemek yapmadım ki” demis Nozibele. “Yap yoksa ısırırım!” demiş köpek. Nozibele de köpeğe biraz yemek pişirmiş.</p>
+<p>Köpek “Bana yemek pişir!” demiş. “Ama ben hiç bir köpeğe yemek yapmadım ki,” demiş Nozibele. “Yap yoksa ısırırım!” demiş köpek. Nozibele de köpeğe biraz yemek pişirmiş.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Tessa Welch<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
 
-<p>Böylece Nozibele hergün köpeğin yemek ve temizlik işlerini yapmaya başlamış. Sonra birgün köpek, “Nozibele, bugün bir kaç arkadaşımı ziyaret edeceğim. Ben gelene kadar, evi temizle, yemek pişir ve çamaşırlarımı yıka” demiş.</p>
+<p>Böylece Nozibele her gün köpeğin yemek ve temizlik işlerini yapmaya başlamış. Sonra birgün köpek, “Nozibele, bugün bir kaç arkadaşımı ziyaret edeceğim. Ben gelene kadar, evi temizle, yemek pişir ve çamaşırlarımı yıka,” demiş.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Tessa Welch<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
 
-<p>Köpek geri geldiğinde Nozibele’yi aramış. “Nozibele nerdesin?” diye bağırmaya başlamış. Yatağın altındaki saç “Burdayım yatağın altında,” demiş. Ikinci saç, “Burdayım, kapının arkasında,” demiş. Üçüncü saç da, “Burdayım, ağılda” diye seslenmiş.</p>
+<p>Köpek geri geldiğinde Nozibele’yi aramış. “Nozibele neredesin?” diye bağırmaya başlamış. Yatağın altındaki saç “Buradayım yatağın altında,” demiş. İkinci saç, “Buradayım, kapının arkasında,” demiş. Üçüncü saç da, “Buradayım, ağılda,” diye seslenmiş.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
