--- a/stories/tr/0067_yemek-pişirmek.html
+++ b/stories/tr/0067_yemek-pişirmek.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Yemek Pişirmek</title>
+    <title>Yemek pişirmek</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/01.jpg" />
 
-<h1 id="yemek-piirmek">Yemek Pişirmek</h1>
+<h1 id="yemek-piirmek">Yemek pişirmek</h1>
 
 Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Türkçe</div><div class="pagebreak">
 
@@ -77,7 +77,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Türkçe</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/06.jpg" /></p>
 
-<p>Balkabağını kesiyorum.</p>
+<p>Bal kabağını kesiyorum.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
