--- a/stories/tr/0072_bal-kuşunun-intikamı.html
+++ b/stories/tr/0072_bal-kuşunun-intikamı.html
@@ -49,14 +49,14 @@ Zulu folktale<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/02.jpg" /></p>
 
-<p>Bu hikaye balkuşu Ngede ile Gingile adında aç gözlü bir genç adamın hikayesi. Bir gün Gingile avlanmaya gittiğinde Ngede’nin sesini duymuş. Gingile’nin ağzı bal bulurum düşüncesiyle sulanmaya başlamış. Durmuş ve kuşun sesini dikkatlice izleyerek onun bulunduğu dalların altina gelmiş. “Çitik, çitik, çitik” diye ötmüş kuş ve ara ara arkasına bakarak Gingile’nin onu izlediğinden emin olmak istemiş.</p>
+<p>Bu hikaye bal kuşu Ngede ile Gingile adında aç gözlü bir genç adamın hikayesi. Bir gün Gingile avlanmaya gittiğinde Ngede’nin sesini duymuş. Gingile’nin ağzı bal bulurum düşüncesiyle sulanmaya başlamış. Durmuş ve kuşun sesini dikkatlice izleyerek onun bulunduğu dalların altina gelmiş. “Çitik, çitik, çitik,” diye ötmüş kuş ve ara ara arkasına bakarak Gingile’nin onu izlediğinden emin olmak istemiş.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/03.jpg" /></p>
 
-<p>Yarım saat sonra, bir incir ağacına ulaşmışlar. Ngede dallar arasında çılgınca zıplamaya başlamış. Sonra bir dalın üstünde durup kafasını ileri geri sallamış. Böyle yaparak Gingile’ye mesaj vermeye çalışmış: “Hadi bak burda işte! Gel, hadi ne duruyorsun?” Gingile ağacın altından baktığında hiç arı görmemiş ama gene de Ngede’ye güvenmiş.</p>
+<p>Yarım saat sonra, bir incir ağacına ulaşmışlar. Ngede dallar arasında çılgınca zıplamaya başlamış. Sonra bir dalın üstünde durup kafasını ileri geri sallamış. Böyle yaparak Gingile’ye mesaj vermeye çalışmış: “Hadi bak burada işte! Gel, hadi ne duruyorsun?” Gingile ağacın altından baktığında hiç arı görmemiş ama gene de Ngede’ye güvenmiş.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -77,49 +77,49 @@ Zulu folktale<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/06.jpg" /></p>
 
-<p>Arılar gittikten sonra, Gingile elini kovanın içine sokup kocaman bal, yag ve bir miktar arı larvası dolu petekleri dışarı çıkartmış. Petekleri dikkatlice omuzunda taşıdığı torbasına yerleştirmiş ve ağaçtan inmeye başlamış.</p>
+<p>Arılar gittikten sonra, Gingile elini kovanın içine sokup kocaman bal, yağ ve bir miktar arı larvası dolu petekleri dışarı çıkartmış. Petekleri dikkatlice omuzunda taşıdığı torbasına yerleştirmiş ve ağaçtan inmeye başlamış.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/07.jpg" /></p>
 
-<p>Ngile, bütün olup biteni dikkatlice izlemiş ve Gingile’ nin ona teşekkür etmek icin bal dolu bir parça petek vereceğini düşünerek daldan dala uçup o da yavaş yavaş alçalmış. Gingile nihayet ağaçtan inmiş. Ngele’de ona yakın bir kayanın üstüne konup ödülünü beklemeye başlamış.</p>
+<p>Ngede, bütün olup biteni dikkatlice izlemiş ve Gingile’nin ona teşekkür etmek için bal dolu bir parça petek vereceğini düşünerek daldan dala uçup o da yavaş yavaş alçalmış. Gingile nihayet ağaçtan inmiş. Ngede’de ona yakın bir kayanın üstüne konup ödülünü beklemeye başlamış.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/08.jpg" /></p>
 
-<p>Ama Gingile ateşi söndürüp mızrağını toplayıp bal kuşunu hiç düşünmeden evine doğru yürümeye koyulmuş. Ngede kızgın kızgın seslenmiş: “Çık-karrt, çık-karrt, çık-karrt!” Gingile durmuş, küçük kuşa bakmış ve kahkahalar atarak gülmeye başlamış. “Yani sen şimdi bal falan mı istiyorsun benden arkadaş? Ha? Ama bütün işi ben yaptım, arıların sokmalarına katlandım. Neden şimdi bu cânım balımı seninle paylaşayım?” Ve yürümeye devam etmiş. Ngede çok sinirlenmiş. Böyle bir davranışı haketmediğini düşünmüş. Ama er geç intikamını almaya kararlıymış.</p>
+<p>Ama Gingile ateşi söndürüp mızrağını toplayıp bal kuşunu hiç düşünmeden evine doğru yürümeye koyulmuş. Ngede kızgın kızgın seslenmiş: “Çık-karrt, çık-karrt, çık-karrt!” Gingile durmuş, küçük kuşa bakmış ve kahkahalar atarak gülmeye başlamış. “Yani sen şimdi bal falan mı istiyorsun benden arkadaş? Ha? Ama bütün işi ben yaptım, arıların sokmalarına katlandım. Neden şimdi bu cânım balımı seninle paylaşayım?” Ve yürümeye devam etmiş. Ngede çok sinirlenmiş. Böyle bir davranışı hak etmediğini düşünmüş. Ama er geç intikamını almaya kararlıymış.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/09.jpg" /></p>
 
-<p>Bir kaç hafta sonra bir gun Gingile gene Ngede’nin bal çağrısını duymuş. Lezzetli balı hatırlayıp gene kuşu izlemiş. Ngede Gingile’yi ormanın kenarına kadar getirmiş. Orda “şemsiye dikeni” denen bir ağacın üstüne konmuş. “Tamam”, diye düşünmüş Gingile “kovan bu ağaçta olmalı.” Hemen gene ateş yakmış ve duman tüten çubuğu dişlerinin arasına alıp tırmanmaya başlamış. Ngede de izlemeye koyulmuş.</p>
+<p>Bir kaç hafta sonra bir gün Gingile gene Ngede’nin bal çağrısını duymuş. Lezzetli balı hatırlayıp gene kuşu izlemiş. Ngede Gingile’yi ormanın kenarına kadar getirmiş. Orada “şemsiye dikeni” denen bir ağacın üstüne konmuş. “Tamam,” diye düşünmüş Gingile “kovan bu ağaçta olmalı.” Hemen gene ateş yakmış ve duman tüten çubuğu dişlerinin arasına alıp tırmanmaya başlamış. Ngede de izlemeye koyulmuş.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/10.jpg" /></p>
 
-<p>Gingile tirmandığında arı sesi duymadığına şaşırmış. “Belki de kovan ağacın içinde çok derin bir yerdedir,” diye düşünmüş kendi kendine. Biraz daha yukarı tırmanıp daha yüksek bir dalda durmuş. Fakat kovan yerine bir Leoparın yüzüyle karşılaşmış. Leopar böyle saygısızca uykusundan uyandırıldığı için son derece kızmış. Gözlerini kısıp ağzını açarak kocaman sivri dişlerini göstermiş.</p>
+<p>Gingile tırmandığında arı sesi duymadığına şaşırmış. “Belki de kovan ağacın içinde çok derin bir yerdedir,” diye düşünmüş kendi kendine. Biraz daha yukarı tırmanıp daha yüksek bir dalda durmuş. Fakat kovan yerine bir Leoparın yüzüyle karşılaşmış. Leopar böyle saygısızca uykusundan uyandırıldığı için son derece kızmış. Gözlerini kısıp ağzını açarak kocaman sivri dişlerini göstermiş.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/11.jpg" /></p>
 
-<p>Leopar onu yakalamadan Gingile olanca hızıyla agaçtan inmeye başlamış. Fakat telaştan bir dalı atlayınca paldır küldür yere yuvarlanmış ve bileğini incitmiş. Topallaya topallaya ordan hızla uzaklaşmış. Leopar onun peşine düşmek istemeyecek kadar yorgun olduğu için çok şanslıymış. Böylece hem Ngede intikamını hem de Gingile iyi bir ders almış.</p>
+<p>Leopar onu yakalamadan Gingile olanca hızıyla ağaçtan inmeye başlamış. Fakat telaştan bir dalı atlayınca paldır küldür yere yuvarlanmış ve bileğini incitmiş. Topallaya topallaya oradan hızla uzaklaşmış. Leopar onun peşine düşmek istemeyecek kadar yorgun olduğu için çok şanslıymış. Böylece hem Ngede intikamını hem de Gingile iyi bir ders almış.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/12.jpg" /></p>
 
-<p>Ve o gün bu gündür Ngede nin hikâyesini dinleyen çocuklar her zaman bu küçük kuşa saygı duymuşlar. Ne zaman bal toplamaya gitseler büyük bir parça bal peteğini ona bırakmayı unutmamışlar.</p>
+<p>Ve o gün bu gündür Ngede’nin hikâyesini dinleyen çocuklar her zaman bu küçük kuşa saygı duymuşlar. Ne zaman bal toplamaya gitseler büyük bir parça bal peteğini ona bırakmayı unutmamışlar.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
