--- a/stories/tr/0087_okumayı-seviyorum.html
+++ b/stories/tr/0087_okumayı-seviyorum.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Okumayı Seviyorum!</title>
+    <title>Okumayı seviyorum!</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/01.jpg" />
 
-<h1 id="okumay-seviyorum">Okumayı Seviyorum!</h1>
+<h1 id="okumay-seviyorum">Okumayı seviyorum!</h1>
 
 Letta Machoga<br>Türkçe</div><div class="pagebreak">
 
