--- a/stories/tr/0087_okumayı-seviyorum_slides.html
+++ b/stories/tr/0087_okumayı-seviyorum_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Okumayı Seviyorum! - Global African Storybook</title>
+  <title>Okumayı seviyorum! - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="okumayı-seviyorum" class="slide level1">
-<h1>Okumayı Seviyorum!</h1>
+<h1>Okumayı seviyorum!</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/01.jpg" />
 </center>
@@ -168,7 +168,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="okumayı-seviyorum-1">Okumayı Seviyorum!</h2>
+<h2 id="okumayı-seviyorum-1">Okumayı seviyorum!</h2>
 <strong>Text:</strong> Letta Machoga<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
