--- a/stories/tr/0089_khalai-bitkilerle-konuşuyor_slides.html
+++ b/stories/tr/0089_khalai-bitkilerle-konuşuyor_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p>Khakai okuldan evine döndüğünde, portakal ağacını ziyaret ediyor. &quot;Portakalların olgunlaştı mı?&quot; diye soruyor.</p>
+<p>Khalai okuldan evine döndüğünde, portakal ağacını ziyaret ediyor. &quot;Portakalların olgunlaştı mı?&quot; diye soruyor.</p>
 <center>
 <strong>7</strong>
 </center>
