--- a/stories/tr/0111_neden-su-aygırlarının-tüyleri-yok_slides.html
+++ b/stories/tr/0111_neden-su-aygırlarının-tüyleri-yok_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Neden Su Aygırlarının Tüyleri Yok - Global African Storybook</title>
+  <title>Neden su aygırlarının tüyleri yok - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="neden-su-aygırlarının-tüyleri-yok" class="slide level1">
-<h1>Neden Su Aygırlarının Tüyleri Yok</h1>
+<h1>Neden su aygırlarının tüyleri yok</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/01.jpg" />
 </center>
@@ -168,7 +168,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="neden-su-aygırlarının-tüyleri-yok-1">Neden Su Aygırlarının Tüyleri Yok</h2>
+<h2 id="neden-su-aygırlarının-tüyleri-yok-1">Neden su aygırlarının tüyleri yok</h2>
 <strong>Text:</strong> Basilio Gimo, David Ker<br> <strong>Illustrations:</strong> Carol Liddiment<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
