--- a/stories/tr/0120_saç_slides.html
+++ b/stories/tr/0120_saç_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/07.jpg" /></p>
-<p>Zanele saçlarını geriye doğru tara</p>
+<p>Zanele saçlarını geriye doğru tarar.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/09.jpg" /></p>
-<p>Themba saçlarını traş ettirir.</p>
+<p>Themba saçlarını tıraş ettirir.</p>
 <center>
 <strong>8</strong>
 </center>
