--- a/stories/tr/0156_aç-timsah.html
+++ b/stories/tr/0156_aç-timsah.html
@@ -70,7 +70,7 @@ Christian G.<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
 
-<p>Ve böylece artık aç değil ve çok mutlu.</p>
+<p>Ve böylece o artık aç değil ve çok mutlu.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
