--- a/stories/tr/0156_aç-timsah_slides.html
+++ b/stories/tr/0156_aç-timsah_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
-<p>Ve böylece artık aç değil ve çok mutlu.</p>
+<p>Ve böylece o artık aç değil ve çok mutlu.</p>
 <center>
 <strong>4</strong>
 </center>
