--- a/stories/tr/0231_hava-durumu-kitabı.html
+++ b/stories/tr/0231_hava-durumu-kitabı.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hava Durumu Kitabı</title>
+    <title>Hava durumu kitabı</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/01.jpg" />
 
-<h1 id="hava-durumu-kitab">Hava Durumu Kitabı</h1>
+<h1 id="hava-durumu-kitab">Hava durumu kitabı</h1>
 
 Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Türkçe</div><div class="pagebreak">
 
