--- a/stories/tr/0231_hava-durumu-kitabı_slides.html
+++ b/stories/tr/0231_hava-durumu-kitabı_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Hava Durumu Kitabı - Global African Storybook</title>
+  <title>Hava durumu kitabı - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="hava-durumu-kitabı" class="slide level1">
-<h1>Hava Durumu Kitabı</h1>
+<h1>Hava durumu kitabı</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/01.jpg" />
 </center>
@@ -168,7 +168,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="hava-durumu-kitabı-1">Hava Durumu Kitabı</h2>
+<h2 id="hava-durumu-kitabı-1">Hava durumu kitabı</h2>
 <strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Sandra McDougall<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
