--- a/stories/tr/0234_futbol-yıldızı-andiswa_slides.html
+++ b/stories/tr/0234_futbol-yıldızı-andiswa_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
-<p>Andiswa erkek çocukların futbol oynamasını izledi. Hep onlara katılmak istedi. Hocalarına onlarla birlikte çalışıp çalışamayacağıni sordu.</p>
+<p>Andiswa erkek çocukların futbol oynamasını izledi. Hep onlara katılmak istedi. Hocalarına onlarla birlikte çalışıp çalışamayacağını sordu.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
-<p>Çocuklar ona gidip voleybol oynamasını, voleybolun kızlar için daha uygun oldugunu, futbolun erkek oyunu olduğunu soylediler. Andiswa çok üzüldü.</p>
+<p>Çocuklar ona gidip voleybol oynamasını, voleybolun kızlar için daha uygun olduğunu, futbolun erkek oyunu olduğunu söylediler. Andiswa çok üzüldü.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
-<p>Ertesi gün, okulun büyük bir futbol maçı vardı. Hoca çok telaşlıydı çünkü en iyi oyuncusu hastalanmışti ve oynaması mümkün değildi.</p>
+<p>Ertesi gün, okulun büyük bir futbol maçı vardı. Hoca çok telaşlıydı çünkü en iyi oyuncusu hastalanmıştı ve oynaması mümkün değildi.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
-<p>Maç çok zorluydu. Ilk yarıda kimse gol atamadı.</p>
+<p>Maç çok zorluydu. İlk yarıda kimse gol atamadı.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
-<p>Maçın ikinci yarısında çocuklar topu Andiswa'ya pasladılar. Andiswa büyük bir hızla kaleye doğru koştu. Topa kuvvetlice vurdu ve onu ağlara gonderip golünü attı.</p>
+<p>Maçın ikinci yarısında çocuklar topu Andiswa'ya pasladılar. Andiswa büyük bir hızla kaleye doğru koştu. Topa kuvvetlice vurdu ve onu ağlara gönderip golünü attı.</p>
 <center>
 <strong>7</strong>
 </center>
