--- a/stories/tr/0243_büyükanne-ile-tatil_slides.html
+++ b/stories/tr/0243_büyükanne-ile-tatil_slides.html
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
-<p>Bir gün, Odongo, büyükannesinin ineklerini otlatmaya götürdü. İnekler komşu tarlaya girdiler. Çiftçi Odongoya kızmıştı. Onu, inekler ekinlerini yediği için onlara el koyacağını söyleyerek tehdit etti. O günden sonra, Odongo ineklerin tekrardan bir belaya bulaşmayacağına söz verdi.</p>
+<p>Bir gün, Odongo, büyükannesinin ineklerini otlatmaya götürdü. İnekler komşu tarlaya girdiler. Çiftçi Odongo'ya kızmıştı. Onu, inekler ekinlerini yediği için onlara el koyacağını söyleyerek tehdit etti. O günden sonra, Odongo ineklerin tekrardan bir belaya bulaşmayacağına söz verdi.</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
-<p>Başka bir gün, çocuklar Nyar-Kenyada ile birlikte pazara gittiler. Onun, sebze, şeker ve sabun satmak için bir tezgahı vardı. Apiyo, müşterilere eşyaların fiyatlarını söylemekten hoşlanmıştı. Odongo da müşterilerin aldıklarını paketledi.</p>
+<p>Başka bir gün, çocuklar Nyar-Kanyada ile birlikte pazara gittiler. Onun, sebze, şeker ve sabun satmak için bir tezgahı vardı. Apiyo, müşterilere eşyaların fiyatlarını söylemekten hoşlanmıştı. Odongo da müşterilerin aldıklarını paketledi.</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/17.jpg" /></p>
-<p>Günün sonunda, hep birlikte chai çayı içtiler. Büyükannelerine kazandığı parayı saymasında yardım ettiler.</p>
+<p>Günün sonunda, hep birlikte sütlü çay içtiler. Büyükannelerine kazandığı parayı saymasında yardım ettiler.</p>
 <center>
 <strong>16</strong>
 </center>
