--- a/stories/tr/0271_iki_slides.html
+++ b/stories/tr/0271_iki_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Anansi ve bilgelik - Global African Storybook</title>
+  <title>İki - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="anansi-ve-bilgelik" class="slide level1">
-<h1>Anansi ve bilgelik</h1>
+<section id="iki" class="slide level1">
+<h1>İki</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
-<p>Uzun uzun zaman önce, insanlar hiç bir şey bilmiyorlarmış. Onlar, nasıl ekin yetiştirileceğini, nasıl kumaş dokunacağı, veya nasıl demir eşyalar yapılacağını bilmiyorlarmış. Gökteki Tanrı Nyame, dünya üzerindeki tüm bilgeliğe sahipmiş. Bilgeliği, kil bir kasenin içinde güvenle saklıyormuş.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/02.jpg" /></p>
+<p>Tutmak için iki küçük el.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
-<p>Bir gün, Nyame, bilgelik kasesini Anansi'ye vermeye karar vermiş. Anansi kil kasenin içine her bakışında yeni şeyler öğrenmiş. Bu, çok heyecan vericiymiş!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/03.jpg" /></p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +113,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
-<p>Açgözlü Anansi, &quot;Ben bu kaseyi büyük bir ağacın en tepesinde güvenle saklarım. Böylece tüm bilgeliğe ben sahip olurum!&quot; diye düşünmüş. Uzun bir ip dokumuş, kil kasenin etrafına sarmış ve kaseyi karnına bağlamış. Ama her seferinde dizlerine çarpan kase ile birlikte ağaca tırmanmak çok zormuş.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/04.jpg" /></p>
+<p>Vurmak için iki küçük ayak.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +122,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
-<p>Tüm bu zaman boyunca, Anansi'nin oğlu, ağacın altında babasını izleyerek durmuş. &quot;Eğer kaseyi sırtına bağlarsan tırmanmak daha kolay olmayacak mı?&quot; diye sormuş. Anansi, bilgelik dolu kil kaseyi sırtına bağlamayı denemiş ve gerçekten de kaseyi bu şekilde taşımak çok daha kolaymış.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/05.jpg" /></p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +130,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
-<p>Hızlı bir şekilde ağacın tepesine varmış. Ama ardından durmuş ve düşünmüş, &quot;Benim tüm bilgeliğe sahip tek kişi olmam gerekiyordu, ve burada benim oğlum benden daha akıllı.&quot; Anansi bu duruma o kadar çok sinirlenmiş ki, kil kaseyi ağacın tepesinden aşağı atmış.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/06.jpg" /></p>
+<p>Görmek için iki küçük göz.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +139,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
-<p>Kase yerde parçalara ayrılmış. Bilgelik, herkesin birbiriyle paylaşması için artık serbestmiş. İşte bu, insanların nasıl çiftçilik yapılacağını, kıyafet dokumayı ve demir işlemeyi ve nasıl yapacaklarını bildikleri diğer her şeyi nasıl öğrendiklerinin hikayesidir.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/07.jpg" /></p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,18 +147,52 @@
 </section>
 <section class="slide level1">
 
-<h2 id="anansi-ve-bilgelik-1">Anansi ve bilgelik</h2>
-<strong>Text:</strong> Ghanaian folktale<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/08.jpg" /></p>
+<p>Duymak için iki küçük kulak.</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/09.jpg" /></p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/10.jpg" /></p>
+<p>Ve SARILMAK için iki sevgi dolu kol!</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/11.jpg" /></p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="iki-1">İki</h2>
+<strong>Text:</strong> Carole Bloch<br> <strong>Illustrations:</strong> Richard MacIntosh<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/anansi-and-wisdom'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/two'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
 
