--- a/stories/tr/0296_muz-satıcısı-tom.html
+++ b/stories/tr/0296_muz-satıcısı-tom.html
@@ -63,7 +63,7 @@ Humphreys Odunga<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/04.jpg" /></p>
 
-<p>Pazardaki insanlar meyva alıyorlar.</p>
+<p>Pazardaki insanlar meyve alıyorlar.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
