--- a/stories/tr/0296_muz-satıcısı-tom_slides.html
+++ b/stories/tr/0296_muz-satıcısı-tom_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/04.jpg" /></p>
-<p>Pazardaki insanlar meyva alıyorlar.</p>
+<p>Pazardaki insanlar meyve alıyorlar.</p>
 <center>
 <strong>3</strong>
 </center>
