--- a/stories/tr/0302_ateş_slides.html
+++ b/stories/tr/0302_ateş_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
-<p>Ateş harika birşeydir.</p>
+<p>Ateş harika bir şeydir.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/09.jpg" /></p>
-<p>Ates güçlüdür.</p>
+<p>Ateş güçlüdür.</p>
 <center>
 <strong>8</strong>
 </center>
