--- a/stories/tr/0324_evden-ayrılıp-şehre-gittiğim-gün_slides.html
+++ b/stories/tr/0324_evden-ayrılıp-şehre-gittiğim-gün_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/08.jpg" /></p>
-<p>Otobüsün yüklenme işi bitmiş bütün yolcular yerlerine oturmuştu. Bazı satıcılar mallarini satmak için otobüse girmişlerdi. Herbiri ne satıyorsa bağıra bağıra pazarlıyordu. Ettikleri laflar cok komikti.</p>
+<p>Otobüsün yüklenme işi bitmiş bütün yolcular yerlerine oturmuştu. Bazı satıcılar mallarını satmak için otobüse girmişlerdi. Her biri ne satıyorsa bağıra bağıra pazarlıyordu. Ettikleri laflar çok komikti.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/15.jpg" /></p>
-<p>Yol esnasında hep amcamın büyük şehirde oturduğu yerin adını aklımda tutmaya çalıştım. Uykuya dalarken bile onu mırıldanıyordum.</p>
+<p>Yol sırasında hep amcamın büyük şehirde oturduğu yerin adını aklımda tutmaya çalıştım. Uykuya dalarken bile onu mırıldanıyordum.</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
-<p>Dokuz saat sonra, bir vurma gürültüsüyle uyandım. Otobüse vurarak köyüme gitmek isteyen yolcuları cağırıyorlardı. Hemen küçük torbamı alıp otobüsten indim.</p>
+<p>Dokuz saat sonra, bir vurma gürültüsüyle uyandım. Otobüse vurarak köyüme gitmek isteyen yolcuları çağırıyorlardı. Hemen küçük torbamı alıp otobüsten indim.</p>
 <center>
 <strong>15</strong>
 </center>
