--- a/stories/tr/0327_hayvan-sayımı.html
+++ b/stories/tr/0327_hayvan-sayımı.html
@@ -56,14 +56,14 @@ Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br>Türkçe</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/03.jpg" /></p>
 
-<p>Iki zürafa su içecek.</p>
+<p>İki zürafa su içecek.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
 
-<p>Üç buffalo ve dört kuş da su içecek.</p>
+<p>Üç bizon ve dört kuş da su içecek.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
