--- a/stories/tr/0337_mum-çocuklar_slides.html
+++ b/stories/tr/0337_mum-çocuklar_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/08.jpg" /></p>
-<p>Ama artık çok geçmiş. Cocuk sıcak güneşin altında eriyivermiş.</p>
+<p>Ama artık çok geçmiş. Çocuk sıcak güneşin altında eriyivermiş.</p>
 <center>
 <strong>7</strong>
 </center>
